--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -13,10 +13,10 @@
     <EditText
         android:layout_width="match_parent"
         android:paddingLeft="34dp"
-        android:layout_marginLeft="@dimen/btn_circular"
-        android:layout_marginTop="28dp"
-        android:layout_marginRight="@dimen/btn_circular"
-        android:layout_height="35dp"
+        android:layout_marginLeft="@dimen/dp_21"
+        android:layout_marginTop="@dimen/dp_28"
+        android:layout_marginRight="@dimen/dp_21"
+        android:layout_height="@dimen/dp_35"
         android:background="@drawable/input_bg_grey"
         android:hint="请输入旧密码"
         android:textSize="12sp" />
@@ -25,10 +25,10 @@
     <EditText
         android:layout_width="match_parent"
         android:paddingLeft="34dp"
-        android:layout_marginLeft="@dimen/btn_circular"
-        android:layout_marginTop="@dimen/ten"
-        android:layout_marginRight="@dimen/btn_circular"
-        android:layout_height="35dp"
+        android:layout_marginLeft="@dimen/dp_21"
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginRight="@dimen/dp_21"
+        android:layout_height="@dimen/dp_35"
         android:background="@drawable/input_bg_grey"
         android:hint="请输入新密码"
         android:textSize="12sp" />
@@ -36,21 +36,21 @@
 
     <EditText
         android:layout_width="match_parent"
-        android:paddingLeft="34dp"
-        android:layout_marginLeft="@dimen/btn_circular"
-        android:layout_marginTop="@dimen/ten"
-        android:layout_marginRight="@dimen/btn_circular"
-        android:layout_height="35dp"
+        android:paddingLeft="@dimen/dp_34"
+        android:layout_marginLeft="@dimen/dp_21"
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginRight="@dimen/dp_21"
+        android:layout_height="@dimen/dp_35"
         android:background="@drawable/input_bg_grey"
         android:hint="请再次输入新密码"
         android:textSize="12sp" />
 
 
     <Button
-        android:layout_width="260dp"
-        android:layout_height="@dimen/line_height"
+        android:layout_width="@dimen/dp_260"
+        android:layout_height="@dimen/dp_45"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="33dp"
+        android:layout_marginTop="@dimen/dp_33"
         android:textStyle="bold"
         android:background="@drawable/btn_circular"
         android:text="@string/accomplish"
