--- a/app/src/main/res/layout/activity_employee_information.xml
+++ b/app/src/main/res/layout/activity_employee_information.xml
@@ -13,7 +13,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin"
+        android:layout_marginTop="@dimen/dp_16"
         android:background="@color/white"
         android:gravity="center_vertical"
         android:orientation="horizontal">
@@ -22,7 +22,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/ten"
+            android:layout_marginLeft="@dimen/dp_10"
             android:layout_weight="1"
             android:text="照片"
             android:textColor="@color/six"
@@ -32,8 +32,8 @@
             android:id="@+id/employee_image"
             android:layout_width="65dp"
             android:layout_height="65dp"
-            android:layout_marginRight="@dimen/margin"
-            android:padding="@dimen/five"
+            android:layout_marginRight="@dimen/dp_16"
+            android:padding="@dimen/dp_5"
             android:src="@mipmap/mine_head" />
 
     </LinearLayout>
@@ -41,12 +41,12 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/line_height"
-        android:layout_marginTop="@dimen/ten"
+        android:layout_height="@dimen/dp_45"
+        android:layout_marginTop="@dimen/dp_10"
         android:background="@color/white"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:paddingLeft="@dimen/ten">
+        android:paddingLeft="@dimen/dp_10">
 
 
         <TextView
@@ -68,12 +68,12 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/line_height"
-        android:layout_marginTop="@dimen/ten"
+        android:layout_height="@dimen/dp_45"
+        android:layout_marginTop="@dimen/dp_10"
         android:background="@color/white"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:paddingLeft="@dimen/ten">
+        android:paddingLeft="@dimen/dp_10">
 
 
         <TextView
@@ -95,12 +95,12 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/line_height"
-        android:layout_marginTop="@dimen/ten"
+        android:layout_height="@dimen/dp_45"
+        android:layout_marginTop="@dimen/dp_10"
         android:background="@color/white"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:paddingLeft="@dimen/ten">
+        android:paddingLeft="@dimen/dp_10">
 
 
         <TextView
@@ -122,12 +122,12 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/line_height"
-        android:layout_marginTop="@dimen/ten"
+        android:layout_height="@dimen/dp_45"
+        android:layout_marginTop="@dimen/dp_10"
         android:background="@color/white"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:paddingLeft="@dimen/ten">
+        android:paddingLeft="@dimen/dp_10">
 
 
         <TextView
@@ -150,11 +150,11 @@
 
     <Button
         android:layout_width="match_parent"
-        android:layout_height="@dimen/line_height"
+        android:layout_height="@dimen/dp_45"
         android:layout_gravity="center_horizontal"
-        android:layout_marginLeft="60dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginRight="60dp"
+        android:layout_marginLeft="@dimen/dp_60"
+        android:layout_marginTop="@dimen/dp_60"
+        android:layout_marginRight="@dimen/dp_60"
         android:background="@drawable/input_bg_blue"
         android:onClick="btnCommit"
         android:text="提交"
