--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,7 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="152dp"
+        android:layout_marginTop="@dimen/dp_152"
         android:src="@mipmap/zhitieyun"
         android:textSize="45sp" />
 
@@ -31,31 +31,31 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="66dp"
+        android:layout_marginTop="@dimen/dp_66"
         android:orientation="vertical"
-        android:paddingLeft="19.5dp"
-        android:paddingRight="19.5dp">
+        android:paddingLeft="@dimen/dp_19_half"
+        android:paddingRight="@dimen/dp_19_half">
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp"
+            android:layout_marginLeft="@dimen/dp_40"
+            android:layout_marginRight="@dimen/dp_40"
             android:background="@drawable/input_bg_white"
             android:orientation="horizontal">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="7dp"
+                android:layout_margin="@dimen/dp_7"
                 android:src="@mipmap/phone_icon" />
 
             <EditText
                 android:id="@+id/login_et_phone"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="7dp"
+                android:layout_marginLeft="@dimen/dp_7"
                 android:layout_weight="1"
                 android:background="@null"
                 android:hint="请输入手机号"
@@ -69,30 +69,30 @@
 
         <TextView
             style="@style/fenge"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp" />
+            android:layout_marginLeft="@dimen/dp_40"
+            android:layout_marginRight="@dimen/dp_40" />
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"
-            android:layout_marginTop="@dimen/ten"
-            android:layout_marginRight="40dp"
+            android:layout_marginLeft="@dimen/dp_40"
+            android:layout_marginTop="@dimen/dp_10"
+            android:layout_marginRight="@dimen/dp_40"
             android:background="@drawable/input_bg_white"
             android:orientation="horizontal">
 
             <ImageView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_margin="7dp"
+                android:layout_margin="@dimen/dp_7"
                 android:src="@mipmap/pass_icon" />
 
             <EditText
                 android:id="@+id/login_et_pass"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:layout_marginLeft="7dp"
+                android:layout_marginLeft="@dimen/dp_7"
                 android:layout_weight="1"
                 android:background="@null"
                 android:hint="请输密码"
@@ -105,16 +105,16 @@
 
         <TextView
             style="@style/fenge"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="40dp" />
+            android:layout_marginLeft="@dimen/dp_40"
+            android:layout_marginRight="@dimen/dp_40" />
 
         <RadioGroup
             android:visibility="invisible"
             android:id="@+id/login_radiogroup"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"
-            android:layout_marginTop="@dimen/ten"
+            android:layout_marginLeft="@dimen/dp_40"
+            android:layout_marginTop="@dimen/dp_10"
             android:gravity="center"
             android:orientation="horizontal">
 
@@ -125,7 +125,7 @@
                 android:button="@drawable/checkbox_radio_blue"
                 android:checked="true"
                 android:gravity="center"
-                android:paddingHorizontal="@dimen/five"
+                android:paddingHorizontal="@dimen/dp_5"
                 android:text="@string/manager"
                 android:textColor="@color/six"
                 android:textSize="12sp" />
@@ -134,10 +134,10 @@
                 android:id="@+id/rbtn_labor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/btn_circular"
+                android:layout_marginLeft="@dimen/dp_21"
                 android:button="@drawable/checkbox_radio_blue"
                 android:gravity="center"
-                android:paddingHorizontal="@dimen/five"
+                android:paddingHorizontal="@dimen/dp_5"
                 android:text="@string/contract_workers"
                 android:textColor="@color/six"
                 android:textSize="12sp" />
@@ -147,10 +147,10 @@
 
         <Button
             android:layout_width="match_parent"
-            android:layout_height="35dp"
-            android:layout_marginLeft="40dp"
-            android:layout_marginTop="@dimen/thirty"
-            android:layout_marginRight="40dp"
+            android:layout_height="@dimen/dp_35"
+            android:layout_marginLeft="@dimen/dp_40"
+            android:layout_marginTop="@dimen/dp_30"
+            android:layout_marginRight="@dimen/dp_40"
             android:background="@drawable/input_bg_blue"
             android:onClick="login"
             android:text="登录"
@@ -160,16 +160,16 @@
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="40dp"
-            android:layout_marginTop="@dimen/five"
-            android:layout_marginRight="40dp">
+            android:layout_marginLeft="@dimen/dp_40"
+            android:layout_marginTop="@dimen/dp_5"
+            android:layout_marginRight="@dimen/dp_40">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:onClick="updatePass"
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
-                android:padding="5dp"
+                android:padding="@dimen/dp_5"
                 android:text="忘记密码"
                 android:textColor="@color/six"
                 android:textSize="10sp" />
