--- a/app/src/main/res/layout/activity_qms_report.xml
+++ b/app/src/main/res/layout/activity_qms_report.xml
@@ -33,11 +33,11 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/thirty"
-                android:layout_marginTop="@dimen/ten"
+                android:layout_height="@dimen/dp_30"
+                android:layout_marginTop="@dimen/dp_10"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
-                android:paddingLeft="@dimen/ten">
+                android:paddingLeft="@dimen/dp_10">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -58,10 +58,10 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/thirty"
+                android:layout_height="@dimen/dp_30"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
-                android:paddingLeft="@dimen/ten">
+                android:paddingLeft="@dimen/dp_10">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -82,10 +82,10 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/thirty"
+                android:layout_height="@dimen/dp_30"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
-                android:paddingLeft="@dimen/ten">
+                android:paddingLeft="@dimen/dp_10">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -106,10 +106,10 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/thirty"
+                android:layout_height="@dimen/dp_30"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
-                android:paddingLeft="@dimen/ten">
+                android:paddingLeft="@dimen/dp_10">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -130,14 +130,14 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/ten"
-                android:layout_marginTop="@dimen/five"
-                android:layout_marginRight="@dimen/ten"
+                android:layout_marginLeft="@dimen/dp_10"
+                android:layout_marginTop="@dimen/dp_5"
+                android:layout_marginRight="@dimen/dp_10"
                 android:background="@drawable/text_grey_line"
                 android:gravity="top"
                 android:orientation="horizontal"
-                android:paddingLeft="@dimen/ten"
-                android:paddingTop="@dimen/five">
+                android:paddingLeft="@dimen/dp_10"
+                android:paddingTop="@dimen/dp_5">
 
                 <!--        <LinearLayout-->
                 <!--            android:layout_width="match_parent"-->
@@ -151,9 +151,9 @@
 
                 <ImageView
                     android:layout_width="wrap_content"
-                    android:layout_height="22dp"
-                    android:paddingLeft="@dimen/five"
-                    android:paddingRight="@dimen/five"
+                    android:layout_height="@dimen/dp_22"
+                    android:paddingLeft="@dimen/dp_5"
+                    android:paddingRight="@dimen/dp_5"
                     android:src="@mipmap/edit_icon" />
 
                 <EditText
@@ -174,10 +174,10 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/thirty"
+                android:layout_height="@dimen/dp_30"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
-                android:paddingLeft="@dimen/ten">
+                android:paddingLeft="@dimen/dp_10">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -204,8 +204,8 @@
                     android:id="@+id/recycler_add_picture"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/ten"
-                    android:layout_marginRight="@dimen/ten">
+                    android:layout_marginLeft="@dimen/dp_10"
+                    android:layout_marginRight="@dimen/dp_10">
 
                 </androidx.recyclerview.widget.RecyclerView>
 
@@ -221,10 +221,10 @@
             </RelativeLayout>
 
             <Button
-                android:layout_width="118dp"
-                android:layout_height="@dimen/line_height"
+                android:layout_width="@dimen/dp_118"
+                android:layout_height="@dimen/dp_45"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/btn_circular"
+                android:layout_marginTop="@dimen/dp_21"
                 android:background="@drawable/input_bg_blue"
                 android:onClick="btnCommit"
                 android:text="提交"
