--- a/app/src/main/res/layout/view_integral_subsidiary.xml
+++ b/app/src/main/res/layout/view_integral_subsidiary.xml
@@ -7,14 +7,14 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/btn_circular"
-        android:layout_marginRight="45dp">
+        android:layout_marginLeft="@dimen/dp_21"
+        android:layout_marginRight="@dimen/dp_45">
 
         <TextView
             android:id="@+id/item_type_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingTop="@dimen/nine"
+            android:paddingTop="@dimen/dp_9"
             android:text="安全问题上报"
             android:textColor="@color/three"
             android:textSize="14sp" />
@@ -24,8 +24,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/item_type_name"
-            android:paddingTop="@dimen/seven"
-            android:paddingBottom="@dimen/seven"
+            android:paddingTop="@dimen/dp_7"
+            android:paddingBottom="@dimen/dp_7"
             android:text="2020-3-21   18:20"
             android:textColor="@color/three"
             android:textSize="10sp" />
