--- a/app/src/main/res/layout/view_test_records.xml
+++ b/app/src/main/res/layout/view_test_records.xml
@@ -13,8 +13,8 @@
 
         <TextView
             android:id="@+id/test_record_desc"
-            android:layout_width="100dp"
-            android:layout_height="@dimen/line_height"
+            android:layout_width="@dimen/dp_100"
+            android:layout_height="@dimen/dp_45"
             android:gravity="center"
             android:text="序号"
             android:textColor="@color/three"
@@ -23,19 +23,19 @@
         <TextView
             android:id="@+id/test_name"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/thirty"
+            android:layout_height="@dimen/dp_30"
             android:layout_weight="1"
             android:gravity="center"
-            android:paddingTop="@dimen/seven"
-            android:paddingBottom="@dimen/seven"
+            android:paddingTop="@dimen/dp_7"
+            android:paddingBottom="@dimen/dp_7"
             android:text="安全概念测试卷 "
             android:textColor="@color/three"
             android:textSize="12sp" />
 
         <TextView
             android:id="@+id/test_time"
-            android:layout_width="118dp"
-            android:layout_height="@dimen/thirty"
+            android:layout_width="@dimen/dp_118"
+            android:layout_height="@dimen/dp_30"
             android:gravity="center"
             android:text="2020年3月12日"
             android:textColor="@color/three"
