--- a/app/src/main/res/layout/activity_about_us.xml
+++ b/app/src/main/res/layout/activity_about_us.xml
@@ -16,7 +16,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="50dp"
         android:drawableTop="@mipmap/zhitieyun_logo"
-        android:drawablePadding="@dimen/seven"
+        android:drawablePadding="@dimen/dp_7"
         android:gravity="center"
         android:text="智铁云"
         android:textColor="#ff0b5089"
@@ -24,10 +24,10 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/line_height"
-        android:layout_marginLeft="@dimen/ten"
-        android:layout_marginTop="50dp"
-        android:layout_marginRight="@dimen/ten"
+        android:layout_height="@dimen/dp_45"
+        android:layout_marginLeft="@dimen/dp_10"
+        android:layout_marginTop="@dimen/dp_50"
+        android:layout_marginRight="@dimen/dp_10"
         android:background="@color/f_nine"
         android:gravity="center_vertical"
         android:orientation="horizontal">
@@ -45,7 +45,7 @@
             android:id="@+id/version_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginRight="27dp"
+            android:layout_marginRight="@dimen/dp_27"
             android:text=""
             android:textColor="@color/black"
             android:textSize="15sp" />
