--- a/app/src/main/res/layout/activity_composite_area_chart.xml
+++ b/app/src/main/res/layout/activity_composite_area_chart.xml
@@ -13,7 +13,7 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="@dimen/line_height"
+        android:layout_height="@dimen/dp_45"
         android:background="@color/bg_dc"
         android:gravity="center"
         android:text=""
@@ -24,14 +24,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="right|center_vertical"
-        android:layout_marginTop="@dimen/seven"
+        android:layout_marginTop="@dimen/dp_7"
         android:background="@drawable/line_blue"
         android:orientation="horizontal">
 
         <Spinner
             android:id="@+id/mspinner"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/thirty"
+            android:layout_height="@dimen/dp_30"
             android:gravity="center"
             android:overlapAnchor="false"
             android:spinnerMode="dropdown"
@@ -41,9 +41,9 @@
     <com.github.mikephil.charting.charts.BarChart
         android:id="@+id/chart"
         android:layout_width="match_parent"
-        android:layout_height="400dp"
-        android:layout_margin="@dimen/btn_circular"
-        android:padding="20dp" />
+        android:layout_height="@dimen/dp_400"
+        android:layout_margin="@dimen/dp_21"
+        android:padding="@dimen/dp_20" />
 
 
 </LinearLayout>
