--- a/app/src/main/res/layout/activity_interal_shop.xml
+++ b/app/src/main/res/layout/activity_interal_shop.xml
@@ -12,8 +12,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_marginLeft="@dimen/margin"
-        android:layout_marginRight="@dimen/margin"
+        android:layout_marginLeft="@dimen/dp_16"
+        android:layout_marginRight="@dimen/dp_16"
         android:layout_height="wrap_content">
 
         <androidx.recyclerview.widget.RecyclerView
