--- a/app/src/main/res/layout/activity_invite_friends.xml
+++ b/app/src/main/res/layout/activity_invite_friends.xml
@@ -12,11 +12,11 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="350dp"
-        android:layout_marginTop="@dimen/line_height">
+        android:layout_marginTop="@dimen/dp_45">
 
         <ImageView
             android:layout_width="match_parent"
-            android:layout_height="350dp"
+            android:layout_height="@dimen/dp_350"
             android:scaleType="fitCenter"
             android:src="@mipmap/zhitieyun_zxing" />
 
@@ -24,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_centerHorizontal="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="6dp"
+            android:layout_marginBottom="@dimen/dp_6"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
 
@@ -33,7 +33,7 @@
                 android:id="@+id/invite_wiexin"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/margin"
+                android:padding="@dimen/dp_16"
                 android:src="@mipmap/weixin_icon" />
 
             <ImageView
@@ -41,7 +41,7 @@
                 android:id="@+id/invite_qq"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/margin"
+                android:padding="@dimen/dp_16"
                 android:src="@mipmap/qq_icon" />
 
             <ImageView
@@ -49,7 +49,7 @@
                 android:id="@+id/invite_weibo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:padding="@dimen/margin"
+                android:padding="@dimen/dp_16"
                 android:src="@mipmap/weibo_icon" />
 
         </LinearLayout>
