--- a/app/src/main/res/layout/activity_join_test.xml
+++ b/app/src/main/res/layout/activity_join_test.xml
@@ -15,7 +15,7 @@
         android:visibility="gone"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:padding="@dimen/twelve">
+        android:padding="@dimen/dp_12">
 
         <TextView
             android:layout_width="wrap_content"
@@ -25,18 +25,18 @@
             android:textSize="12sp" />
 
         <Button
-            android:layout_width="100dp"
-            android:layout_height="@dimen/thirty"
-            android:layout_marginLeft="@dimen/ten"
+            android:layout_width="@dimen/dp_100"
+            android:layout_height="@dimen/dp_30"
+            android:layout_marginLeft="@dimen/dp_10"
             android:background="@drawable/input_bg_blue"
             android:text="施工技术"
             android:textColor="@color/white"
             android:textSize="12sp" />
 
         <Button
-            android:layout_width="100dp"
-            android:layout_height="@dimen/thirty"
-            android:layout_marginLeft="@dimen/ten"
+            android:layout_width="@dimen/dp_100"
+            android:layout_height="@dimen/dp_30"
+            android:layout_marginLeft="@dimen/dp_10"
             android:background="@color/white"
             android:text="施工技术"
             android:textColor="@color/three"
@@ -49,13 +49,13 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/ten"
+        android:layout_marginTop="@dimen/dp_10"
         android:orientation="horizontal">
 
         <TextView
             android:id="@+id/test_grade_desc"
-            android:layout_width="80dp"
-            android:layout_height="@dimen/line_height"
+            android:layout_width="@dimen/dp_80"
+            android:layout_height="@dimen/dp_45"
             android:gravity="center"
             android:text="序号"
             android:textColor="@color/three"
@@ -63,7 +63,7 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="@dimen/thirty"
+            android:layout_height="@dimen/dp_30"
             android:layout_weight="1"
             android:gravity="center"
             android:text="试卷名 "
@@ -71,16 +71,16 @@
             android:textSize="12sp" />
 
         <TextView
-            android:layout_width="90dp"
-            android:layout_height="@dimen/thirty"
+            android:layout_width="@dimen/dp_90"
+            android:layout_height="@dimen/dp_30"
             android:gravity="center"
             android:text="时长"
             android:textColor="@color/three"
             android:textSize="12sp" />
 
         <ImageView
-            android:layout_width="40dp"
-            android:layout_height="@dimen/thirty"
+            android:layout_width="@dimen/dp_40"
+            android:layout_height="@dimen/dp_30"
             android:scaleType="center" />
 
     </LinearLayout>
