--- a/app/src/main/res/layout/activity_lost_password.xml
+++ b/app/src/main/res/layout/activity_lost_password.xml
@@ -14,23 +14,23 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/thirty"
-        android:layout_marginTop="50dp"
-        android:layout_marginRight="@dimen/thirty"
+        android:layout_marginLeft="@dimen/dp_30"
+        android:layout_marginTop="@dimen/dp_50"
+        android:layout_marginRight="@dimen/dp_30"
         android:background="@drawable/input_bg_white"
         android:orientation="horizontal">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="7dp"
+            android:layout_margin="@dimen/dp_7"
             android:src="@mipmap/phone_icon" />
 
         <EditText
             android:id="@+id/lost_phone"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="7dp"
+            android:layout_marginLeft="@dimen/dp_7"
             android:layout_weight="1"
             android:background="@null"
             android:hint="请输入手机号"
@@ -44,30 +44,30 @@
 
     <TextView
         style="@style/fenge"
-        android:layout_marginLeft="@dimen/thirty"
-        android:layout_marginTop="@dimen/five"
-        android:layout_marginRight="@dimen/thirty" />
+        android:layout_marginLeft="@dimen/dp_30"
+        android:layout_marginTop="@dimen/dp_5"
+        android:layout_marginRight="@dimen/dp_30" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/thirty"
-        android:layout_marginTop="@dimen/margin"
-        android:layout_marginRight="@dimen/thirty"
+        android:layout_marginLeft="@dimen/dp_30"
+        android:layout_marginTop="@dimen/dp_16"
+        android:layout_marginRight="@dimen/dp_30"
         android:background="@drawable/input_bg_white"
         android:orientation="horizontal">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="7dp"
+            android:layout_margin="@dimen/dp_7"
             android:src="@mipmap/login_code" />
 
         <EditText
             android:id="@+id/lost_code"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="7dp"
+            android:layout_marginLeft="@dimen/dp_7"
             android:layout_weight="1"
             android:background="@null"
             android:hint="请输入验证码"
@@ -79,7 +79,7 @@
 
         <TextView
             android:id="@+id/lost_get_code"
-            android:layout_width="95dp"
+            android:layout_width="@dimen/dp_95"
             android:layout_height="match_parent"
             android:gravity="center"
             android:onClick="sendCode"
@@ -91,31 +91,31 @@
 
     <TextView
         style="@style/fenge"
-        android:layout_marginLeft="@dimen/thirty"
-        android:layout_marginTop="@dimen/five"
-        android:layout_marginRight="@dimen/thirty" />
+        android:layout_marginLeft="@dimen/dp_30"
+        android:layout_marginTop="@dimen/dp_5"
+        android:layout_marginRight="@dimen/dp_30" />
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/thirty"
-        android:layout_marginTop="@dimen/ten"
-        android:layout_marginRight="@dimen/thirty"
+        android:layout_marginLeft="@dimen/dp_30"
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginRight="@dimen/dp_30"
         android:background="@drawable/input_bg_white"
         android:orientation="horizontal">
 
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_margin="7dp"
+            android:layout_margin="@dimen/dp_7"
             android:src="@mipmap/pass_icon" />
 
         <EditText
             android:id="@+id/lost_new_password"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="7dp"
+            android:layout_marginLeft="@dimen/dp_7"
             android:layout_weight="1"
             android:background="@null"
             android:hint="请输入新密码"
@@ -129,17 +129,17 @@
 
     <TextView
         style="@style/fenge"
-        android:layout_marginLeft="@dimen/thirty"
-        android:layout_marginTop="@dimen/five"
-        android:layout_marginRight="@dimen/thirty" />
+        android:layout_marginLeft="@dimen/dp_30"
+        android:layout_marginTop="@dimen/dp_5"
+        android:layout_marginRight="@dimen/dp_30" />
 
 
     <Button
         android:layout_width="match_parent"
-        android:layout_height="35dp"
-        android:layout_marginLeft="56.5dp"
-        android:layout_marginTop="46dp"
-        android:layout_marginRight="56.5dp"
+        android:layout_height="@dimen/dp_35"
+        android:layout_marginLeft="@dimen/dp_56_half"
+        android:layout_marginTop="@dimen/dp_46"
+        android:layout_marginRight="@dimen/dp_46_half"
         android:background="@drawable/input_bg_blue"
         android:onClick="lostUpdate"
         android:text="确定"
