--- a/app/src/main/res/layout/activity_material_monitoring.xml
+++ b/app/src/main/res/layout/activity_material_monitoring.xml
@@ -13,7 +13,7 @@
     <TextView
         android:id="@+id/tv_name"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/line_height"
+        android:layout_height="@dimen/dp_45"
         android:background="@color/bg_dc"
         android:gravity="center"
         android:text="苏州S1线土建05标"
@@ -23,7 +23,7 @@
     <LinearLayout
         android:id="@+id/safety_line_zhandian"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/line_height"
+        android:layout_height="@dimen/dp_45"
         android:background="@color/light_green"
         android:gravity="center"
         android:orientation="horizontal">
@@ -33,7 +33,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawableRight="@mipmap/xiala_blue"
-            android:drawablePadding="@dimen/seven"
+            android:drawablePadding="@dimen/dp_7"
             android:text="站点一"
             android:textColor="@color/tv_blue"
             android:textSize="12sp" />
@@ -43,10 +43,10 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/ten"
+        android:layout_marginTop="@dimen/dp_10"
         android:background="@color/light_green"
-        android:paddingLeft="@dimen/margin"
-        android:paddingRight="@dimen/margin"
+        android:paddingLeft="@dimen/dp_16"
+        android:paddingRight="@dimen/dp_16"
         android:visibility="gone">
 
 
@@ -71,23 +71,23 @@
     <!--    1-->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="@dimen/dp_70"
         android:orientation="horizontal"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="@dimen/dp_10">
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="70dp"
+            android:layout_height="@dimen/dp_70"
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:paddingLeft="@dimen/twelve">
+            android:paddingLeft="@dimen/dp_12">
 
             <ImageView
                 android:id="@+id/jiance_image"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingRight="@dimen/five"
+                android:paddingRight="@dimen/dp_5"
                 android:src="@mipmap/jiance_pm25" />
 
             <LinearLayout
@@ -108,7 +108,7 @@
                     android:id="@+id/pm25_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/five"
+                    android:layout_marginTop="@dimen/dp_5"
                     android:text="PM2.5"
                     android:textColor="@color/six"
                     android:textSize="10sp" />
@@ -118,17 +118,17 @@
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="70dp"
+            android:layout_height="@dimen/dp_70"
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:paddingLeft="@dimen/twelve">
+            android:paddingLeft="@dimen/dp_12">
 
             <ImageView
                 android:id="@+id/pm10"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingRight="@dimen/five"
+                android:paddingRight="@dimen/dp_5"
                 android:src="@mipmap/jiance_pm10" />
 
             <LinearLayout
@@ -149,7 +149,7 @@
                     android:id="@+id/pm10_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/five"
+                    android:layout_marginTop="@dimen/dp_5"
                     android:text="PM10"
                     android:textColor="@color/six"
                     android:textSize="10sp" />
@@ -159,17 +159,17 @@
         </LinearLayout>
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="70dp"
+            android:layout_height="@dimen/dp_70"
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:paddingLeft="@dimen/twelve">
+            android:paddingLeft="@dimen/dp_12">
 
             <ImageView
                 android:id="@+id/noise"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingRight="@dimen/five"
+                android:paddingRight="@dimen/dp_5"
                 android:src="@mipmap/jiance_zhaosheng" />
 
             <LinearLayout
@@ -190,7 +190,7 @@
                     android:id="@+id/noise_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/five"
+                    android:layout_marginTop="@dimen/dp_5"
                     android:text="噪声"
                     android:textColor="@color/six"
                     android:textSize="10sp" />
@@ -202,22 +202,22 @@
     <!--    2-->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="@dimen/dp_70"
         android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="70dp"
+            android:layout_height="@dimen/dp_70"
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:paddingLeft="@dimen/twelve">
+            android:paddingLeft="@dimen/dp_12">
 
             <ImageView
                 android:id="@+id/tem_image"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingRight="@dimen/five"
+                android:paddingRight="@dimen/dp_5"
                 android:src="@mipmap/jiance_wendu" />
 
             <LinearLayout
@@ -238,7 +238,7 @@
                     android:id="@+id/tem_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/five"
+                    android:layout_marginTop="@dimen/dp_5"
                     android:text="温度"
                     android:textColor="@color/six"
                     android:textSize="10sp" />
@@ -248,17 +248,17 @@
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="70dp"
+            android:layout_height="@dimen/dp_70"
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:paddingLeft="@dimen/twelve">
+            android:paddingLeft="@dimen/dp_12">
 
             <ImageView
                 android:id="@+id/hum"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingRight="@dimen/five"
+                android:paddingRight="@dimen/dp_5"
                 android:src="@mipmap/jiance_shidu" />
 
             <LinearLayout
@@ -279,7 +279,7 @@
                     android:id="@+id/hum_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/five"
+                    android:layout_marginTop="@dimen/dp_5"
                     android:text="湿度"
                     android:textColor="@color/six"
                     android:textSize="10sp" />
@@ -289,17 +289,17 @@
         </LinearLayout>
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="70dp"
+            android:layout_height="@dimen/dp_70"
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:paddingLeft="@dimen/twelve">
+            android:paddingLeft="@dimen/dp_12">
 
             <ImageView
                 android:id="@+id/wp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingRight="@dimen/five"
+                android:paddingRight="@dimen/dp_5"
                 android:src="@mipmap/jiance_fenli" />
 
             <LinearLayout
@@ -320,7 +320,7 @@
                     android:id="@+id/wp_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/five"
+                    android:layout_marginTop="@dimen/dp_5"
                     android:text="风力"
                     android:textColor="@color/six"
                     android:textSize="10sp" />
@@ -332,22 +332,22 @@
     <!--    3-->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="@dimen/dp_70"
         android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="70dp"
+            android:layout_height="@dimen/dp_70"
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:paddingLeft="@dimen/twelve">
+            android:paddingLeft="@dimen/dp_12">
 
             <ImageView
                 android:id="@+id/ws_image"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingRight="@dimen/five"
+                android:paddingRight="@dimen/dp_5"
                 android:src="@mipmap/jiance_pm25" />
 
             <LinearLayout
@@ -368,7 +368,7 @@
                     android:id="@+id/ws_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/five"
+                    android:layout_marginTop="@dimen/dp_5"
                     android:text="风速"
                     android:textColor="@color/six"
                     android:textSize="10sp" />
@@ -378,17 +378,17 @@
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="70dp"
+            android:layout_height="@dimen/dp_70"
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:paddingLeft="@dimen/twelve">
+            android:paddingLeft="@dimen/dp_12">
 
             <ImageView
                 android:id="@+id/wd"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingRight="@dimen/five"
+                android:paddingRight="@dimen/dp_5"
                 android:src="@mipmap/jiance_fenxiang" />
 
             <LinearLayout
@@ -409,7 +409,7 @@
                     android:id="@+id/wd_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/five"
+                    android:layout_marginTop="@dimen/dp_5"
                     android:text="风向"
                     android:textColor="@color/six"
                     android:textSize="10sp" />
@@ -419,17 +419,17 @@
         </LinearLayout>
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="70dp"
+            android:layout_height="@dimen/dp_70"
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:paddingLeft="@dimen/twelve">
+            android:paddingLeft="@dimen/dp_12">
 
             <ImageView
                 android:id="@+id/tsp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingRight="@dimen/five"
+                android:paddingRight="@dimen/dp_5"
                 android:src="@mipmap/jiance_tsp" />
 
             <LinearLayout
@@ -450,7 +450,7 @@
                     android:id="@+id/tsp_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/five"
+                    android:layout_marginTop="@dimen/dp_5"
                     android:text="TSP"
                     android:textColor="@color/six"
                     android:textSize="10sp" />
@@ -462,22 +462,22 @@
     <!--    4-->
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="@dimen/dp_70"
         android:orientation="horizontal">
 
         <LinearLayout
             android:layout_width="0dp"
-            android:layout_height="70dp"
+            android:layout_height="@dimen/dp_70"
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:orientation="horizontal"
-            android:paddingLeft="@dimen/twelve">
+            android:paddingLeft="@dimen/dp_12">
 
             <ImageView
                 android:id="@+id/atm_image"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:paddingRight="@dimen/five"
+                android:paddingRight="@dimen/dp_5"
                 android:src="@mipmap/jiance_daqiyali" />
 
             <LinearLayout
@@ -498,7 +498,7 @@
                     android:id="@+id/atm_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/five"
+                    android:layout_marginTop="@dimen/dp_5"
                     android:text="大气压"
                     android:textColor="@color/six"
                     android:textSize="10sp" />
@@ -513,9 +513,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingLeft="@dimen/twelve"
-        android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp"
+        android:paddingLeft="@dimen/dp_12"
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginBottom="@dimen/dp_10"
         android:visibility="gone">
 
         <TextView
@@ -536,8 +536,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingLeft="@dimen/twelve"
-        android:layout_marginBottom="10dp"
+        android:paddingLeft="@dimen/dp_12"
+        android:layout_marginBottom="@dimen/dp_10"
         android:visibility="gone">
         <TextView
             android:layout_width="wrap_content"
@@ -556,8 +556,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingLeft="@dimen/twelve"
-        android:layout_marginBottom="10dp"
+        android:paddingLeft="@dimen/dp_12"
+        android:layout_marginBottom="@dimen/dp_10"
         android:visibility="gone">
         <TextView
             android:layout_width="wrap_content"
@@ -576,8 +576,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingLeft="@dimen/twelve"
-        android:layout_marginBottom="10dp"
+        android:paddingLeft="@dimen/dp_12"
+        android:layout_marginBottom="@dimen/dp_10"
         android:visibility="gone">
         <TextView
             android:layout_width="wrap_content"
@@ -596,8 +596,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingLeft="@dimen/twelve"
-        android:layout_marginBottom="10dp"
+        android:paddingLeft="@dimen/dp_12"
+        android:layout_marginBottom="@dimen/dp_10"
         android:visibility="gone">
         <TextView
             android:layout_width="wrap_content"
