--- a/app/src/main/res/layout/activity_my_message.xml
+++ b/app/src/main/res/layout/activity_my_message.xml
@@ -44,7 +44,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="80dp">
+        android:layout_marginBottom="@dimen/dp_80">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recycler_message"
