--- a/app/src/main/res/layout/activity_online_signature.xml
+++ b/app/src/main/res/layout/activity_online_signature.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@color/white"
-        android:padding="@dimen/ten"
+        android:padding="@dimen/dp_10"
         android:scrollbars="none">
 
         <LinearLayout
@@ -23,12 +23,12 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/line_height"
-                android:layout_marginTop="@dimen/five"
+                android:layout_height="@dimen/dp_45"
+                android:layout_marginTop="@dimen/dp_5"
                 android:background="@drawable/signature_bg"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
-                android:paddingLeft="@dimen/btn_circular">
+                android:paddingLeft="@dimen/dp_21">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -42,7 +42,7 @@
                     android:layout_height="match_parent"
                     android:background="@null"
                     android:hint="请输入"
-                    android:paddingLeft="@dimen/twelve"
+                    android:paddingLeft="@dimen/dp_12"
                     android:textColor="@color/three"
                     android:textSize="15sp" />
 
@@ -50,12 +50,12 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/line_height"
-                android:layout_marginTop="@dimen/five"
+                android:layout_height="@dimen/dp_45"
+                android:layout_marginTop="@dimen/dp_5"
                 android:background="@drawable/signature_bg"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
-                android:paddingLeft="@dimen/btn_circular">
+                android:paddingLeft="@dimen/dp_21">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -69,7 +69,7 @@
                     android:layout_height="match_parent"
                     android:background="@null"
                     android:hint="请输入"
-                    android:paddingLeft="@dimen/twelve"
+                    android:paddingLeft="@dimen/dp_12"
                     android:textColor="@color/three"
                     android:textSize="15sp" />
 
@@ -77,12 +77,12 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/line_height"
-                android:layout_marginTop="@dimen/five"
+                android:layout_height="@dimen/dp_25"
+                android:layout_marginTop="@dimen/dp_5"
                 android:background="@drawable/signature_bg"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
-                android:paddingLeft="@dimen/btn_circular">
+                android:paddingLeft="@dimen/dp_21">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -96,7 +96,7 @@
                     android:layout_height="match_parent"
                     android:background="@null"
                     android:hint="请输入"
-                    android:paddingLeft="@dimen/twelve"
+                    android:paddingLeft="@dimen/dp_12"
                     android:textColor="@color/three"
                     android:textSize="15sp" />
 
@@ -106,15 +106,15 @@
                 android:id="@+id/signature_iamge"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/ten" />
+                android:layout_marginTop="@dimen/dp_10" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/ten"
+                android:layout_marginTop="@dimen/dp_10"
                 android:background="@color/qian_blue"
                 android:orientation="vertical"
-                android:padding="@dimen/margin">
+                android:padding="@dimen/dp_16">
 
                 <RelativeLayout
                     android:layout_width="match_parent"
@@ -126,9 +126,9 @@
                     <TextView
                         android:id="@+id/signature_area"
                         android:layout_width="wrap_content"
-                        android:layout_height="@dimen/line_height"
+                        android:layout_height="@dimen/dp_45"
                         android:gravity="center"
-                        android:padding="@dimen/ten"
+                        android:padding="@dimen/dp_10"
                         android:text="签名处（请正楷书写）"
                         android:textColor="@color/six"
                         android:textSize="15sp" />
@@ -136,12 +136,12 @@
                     <TextView
                         android:id="@+id/signature_clean"
                         android:layout_width="wrap_content"
-                        android:layout_height="@dimen/line_height"
+                        android:layout_height="@dimen/dp_45"
                         android:layout_alignParentRight="true"
                         android:drawableLeft="@mipmap/chachu"
-                        android:drawablePadding="@dimen/four"
+                        android:drawablePadding="@dimen/dp_4"
                         android:gravity="center"
-                        android:padding="@dimen/ten"
+                        android:padding="@dimen/dp_10"
                         android:text="擦除"
                         android:textColor="@color/tab_focuse"
                         android:textSize="11sp" />
@@ -149,7 +149,7 @@
                     <com.lsy.wisdombuid.widget.SignatureView
                         android:id="@+id/signature_pad"
                         android:layout_width="fill_parent"
-                        android:layout_height="200dp"
+                        android:layout_height="@dimen/dp_200"
                         android:layout_below="@id/signature_area"
                         android:layout_weight="1" />
 
@@ -160,9 +160,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_horizontal"
-                    android:layout_marginTop="@dimen/ten"
+                    android:layout_marginTop="@dimen/dp_10"
                     android:drawableLeft="@mipmap/zhuyi_icon"
-                    android:drawablePadding="@dimen/five"
+                    android:drawablePadding="@dimen/dp_5"
                     android:gravity="center"
                     android:text="签名即代表同意以上内容。该签名仅为岗前三级安全教育用"
                     android:textColor="@color/six"
@@ -173,10 +173,10 @@
 
             <Button
                 android:id="@+id/signature_commit"
-                android:layout_width="115dp"
-                android:layout_height="@dimen/line_height"
+                android:layout_width="@dimen/dp_115"
+                android:layout_height="@dimen/dp_45"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/margin"
+                android:layout_marginTop="@dimen/dp_16"
                 android:background="@drawable/input_bg_blue"
                 android:text="提交"
                 android:textColor="@color/white"
