--- a/app/src/main/res/layout/activity_persinal_management.xml
+++ b/app/src/main/res/layout/activity_persinal_management.xml
@@ -14,7 +14,7 @@
     <TextView
         android:id="@+id/tv_section_name"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/line_height"
+        android:layout_height="@dimen/dp_45"
         android:background="@color/bg_dc"
         android:gravity="center"
         android:text=""
@@ -24,7 +24,7 @@
     <LinearLayout
         android:id="@+id/safety_line_zhandian"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/line_height"
+        android:layout_height="@dimen/dp_45"
         android:background="@color/light_green"
         android:gravity="center"
         android:orientation="horizontal">
@@ -34,7 +34,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:drawableRight="@mipmap/xiala_blue"
-            android:drawablePadding="@dimen/seven"
+            android:drawablePadding="@dimen/dp_7"
             android:text=""
             android:textColor="@color/tv_blue"
             android:textSize="12sp" />
@@ -56,7 +56,7 @@
     <com.lsy.wisdombuid.widget.RecyclerScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/ten"
+        android:layout_marginTop="@dimen/dp_10"
         android:scrollbars="none">
 
         <LinearLayout
@@ -68,15 +68,15 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin"
-                android:layout_marginBottom="@dimen/ten"
+                android:layout_marginTop="@dimen/dp_16"
+                android:layout_marginBottom="@dimen/dp_10"
                 android:orientation="horizontal">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="25dp"
-                    android:layout_marginRight="@dimen/twelve"
+                    android:layout_marginLeft="@dimen/dp_25"
+                    android:layout_marginRight="@dimen/dp_20"
                     android:layout_weight="1"
                     android:background="@drawable/text_blue_line"
                     android:orientation="horizontal"
@@ -88,7 +88,7 @@
                         android:layout_weight="1"
                         android:background="@color/btn_bule"
                         android:gravity="center"
-                        android:padding="@dimen/five"
+                        android:padding="@dimen/dp_5"
                         android:text="管理人员"
                         android:textColor="@color/white"
                         android:textSize="13sp" />
@@ -97,11 +97,11 @@
                         android:id="@+id/persional_num"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="@dimen/five"
+                        android:layout_marginRight="@dimen/dp_5"
                         android:layout_weight="1"
                         android:background="@color/white"
                         android:gravity="center"
-                        android:padding="@dimen/five"
+                        android:padding="@dimen/dp_5"
                         android:text="71人"
                         android:textColor="@color/btn_bule"
                         android:textSize="13sp" />
@@ -111,12 +111,12 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/twelve"
-                    android:layout_marginRight="25dp"
+                    android:layout_marginLeft="@dimen/dp_12"
+                    android:layout_marginRight="@dimen/dp_25"
                     android:layout_weight="1"
                     android:background="@drawable/text_blue_line"
                     android:orientation="horizontal"
-                    android:padding="2dp">
+                    android:padding="@dimen/dp_2">
 
                     <TextView
                         android:layout_width="match_parent"
@@ -124,7 +124,7 @@
                         android:layout_weight="1"
                         android:background="@color/btn_bule"
                         android:gravity="center"
-                        android:padding="@dimen/five"
+                        android:padding="@dimen/dp_5"
                         android:text="劳务人员"
                         android:textColor="@color/white"
                         android:textSize="13sp" />
@@ -133,11 +133,11 @@
                         android:id="@+id/persional_laowu_num"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginRight="@dimen/five"
+                        android:layout_marginRight="@dimen/dp_5"
                         android:layout_weight="1"
                         android:background="@color/white"
                         android:gravity="center"
-                        android:padding="@dimen/five"
+                        android:padding="@dimen/dp_5"
                         android:text="806人"
                         android:textColor="@color/btn_bule"
                         android:textSize="13sp" />
@@ -152,21 +152,21 @@
                 android:layout_height="wrap_content"
                 android:background="@color/f_nine"
                 android:orientation="vertical"
-                android:padding="@dimen/ten">
+                android:padding="@dimen/dp_10">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@mipmap/personnel_data"
-                    android:drawablePadding="@dimen/five"
+                    android:drawablePadding="@dimen/dp_5"
                     android:text="工种分析"
                     android:textColor="@color/three"
                     android:textSize="15sp" />
 
                 <com.github.mikephil.charting.charts.PieChart
                     android:id="@+id/pie_chart"
-                    android:layout_width="250dp"
-                    android:layout_height="250dp"
+                    android:layout_width="@dimen/dp_250"
+                    android:layout_height="@dimen/dp_250"
                     android:layout_gravity="center" />
 
             </LinearLayout>
@@ -175,16 +175,16 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/ten"
+                android:layout_marginTop="@dimen/dp_10"
                 android:background="@color/f_nine"
                 android:orientation="vertical"
-                android:padding="@dimen/ten">
+                android:padding="@dimen/dp_10">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@mipmap/personnel_danwei"
-                    android:drawablePadding="@dimen/five"
+                    android:drawablePadding="@dimen/dp_5"
                     android:text="分包单位分析"
                     android:textColor="@color/three"
                     android:textSize="15sp" />
@@ -193,9 +193,9 @@
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="@dimen/margin"
-                    android:layout_marginRight="@dimen/margin"
-                    android:padding="@dimen/margin">
+                    android:layout_marginLeft="@dimen/dp_16"
+                    android:layout_marginRight="@dimen/dp_16"
+                    android:padding="@dimen/dp_16">
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/recycler_sub_contractor"
@@ -212,24 +212,24 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/ten"
+                android:layout_marginTop="@dimen/dp_10"
                 android:background="@color/f_nine"
                 android:orientation="vertical"
-                android:padding="@dimen/ten">
+                android:padding="@dimen/dp_10">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@mipmap/personnel_icon"
-                    android:drawablePadding="@dimen/five"
+                    android:drawablePadding="@dimen/dp_5"
                     android:text="人员类型分析"
                     android:textColor="@color/three"
                     android:textSize="15sp" />
 
                 <com.github.mikephil.charting.charts.PieChart
                     android:id="@+id/pie_chart_people"
-                    android:layout_width="250dp"
-                    android:layout_height="250dp"
+                    android:layout_width="@dimen/dp_250"
+                    android:layout_height="@dimen/dp_250"
                     android:layout_gravity="center" />
 
             </LinearLayout>
