--- a/app/src/main/res/layout/activity_persion_data.xml
+++ b/app/src/main/res/layout/activity_persion_data.xml
@@ -13,8 +13,8 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="72dp"
-            android:paddingTop="36dp">
+            android:layout_height="@dimen/dp_72"
+            android:paddingTop="@dimen/dp_36">
 
 
             <ImageView
@@ -22,9 +22,9 @@
                 android:layout_height="match_parent"
                 android:layout_alignParentLeft="true"
                 android:onClick="back"
-                android:paddingLeft="@dimen/margin"
-                android:paddingRight="10dp"
-                android:paddingBottom="14dp"
+                android:paddingLeft="@dimen/dp_16"
+                android:paddingRight="@dimen/dp_10"
+                android:paddingBottom="@dimen/dp_14"
                 android:src="@mipmap/back_icon" />
 
             <TextView
@@ -57,23 +57,23 @@
 
             <ImageView
                 android:id="@+id/persion_head_img"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
-                android:layout_marginLeft="25dp"
-                android:layout_marginTop="21dp"
-                android:layout_marginBottom="21dp"
+                android:layout_width="@dimen/dp_90"
+                android:layout_height="@dimen/dp_90"
+                android:layout_marginLeft="@dimen/dp_15"
+                android:layout_marginTop="@dimen/dp_21"
+                android:layout_marginBottom="@dimen/dp_21"
                 android:onClick="headImage"
                 android:src="@mipmap/mine_head" />
 
             <EditText
                 android:id="@+id/persion_input_nickname"
                 style="@style/inputLine"
-                android:layout_width="150dp"
+                android:layout_width="@dimen/dp_150"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:drawablePadding="5dp"
+                android:drawablePadding="@dimen/dp_5"
                 android:hint="请输入您的昵称"
-                android:padding="@dimen/twelve"
+                android:padding="@dimen/dp_12"
                 android:textColor="@color/white"
                 android:textColorHint="@color/f_nine"
                 android:textSize="16sp"
@@ -85,9 +85,9 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:drawableRight="@mipmap/edit_white"
-                android:drawablePadding="5dp"
+                android:drawablePadding="@dimen/dp_5"
                 android:onClick="editNickname"
-                android:padding="@dimen/twelve"
+                android:padding="@dimen/dp_12"
                 android:text="轮回少年"
                 android:textColor="@color/white"
                 android:textSize="22sp" />
@@ -114,17 +114,17 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/twelve"
+        android:layout_marginTop="@dimen/dp_12"
         android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/line_height"
+            android:layout_height="@dimen/dp_45"
             android:drawableLeft="@mipmap/persion_sex"
-            android:drawablePadding="@dimen/ten"
+            android:drawablePadding="@dimen/dp_10"
             android:gravity="center_vertical"
-            android:paddingLeft="21dp"
-            android:paddingRight="@dimen/twelve"
+            android:paddingLeft="@dimen/dp_21"
+            android:paddingRight="@dimen/dp_12"
             android:text="@string/sex"
             android:textColor="@color/six"
             android:textSize="15sp" />
@@ -142,23 +142,23 @@
 
     <TextView
         style="@style/fenge"
-        android:layout_marginLeft="@dimen/margin"
-        android:layout_marginRight="@dimen/margin" />
+        android:layout_marginLeft="@dimen/dp_16"
+        android:layout_marginRight="@dimen/dp_16" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/twelve"
+        android:layout_marginTop="@dimen/dp_12"
         android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/line_height"
+            android:layout_height="@dimen/dp_45"
             android:drawableLeft="@mipmap/persion_age"
-            android:drawablePadding="@dimen/ten"
+            android:drawablePadding="@dimen/dp_10"
             android:gravity="center_vertical"
-            android:paddingLeft="21dp"
-            android:paddingRight="@dimen/twelve"
+            android:paddingLeft="@dimen/dp_21"
+            android:paddingRight="@dimen/dp_12"
             android:text="@string/age"
             android:textColor="@color/three"
             android:textSize="15sp" />
@@ -209,24 +209,24 @@
 
     <TextView
         style="@style/fenge"
-        android:layout_marginLeft="@dimen/margin"
-        android:layout_marginRight="@dimen/margin" />
+        android:layout_marginLeft="@dimen/dp_16"
+        android:layout_marginRight="@dimen/dp_16" />
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/twelve"
+        android:layout_marginTop="@dimen/dp_12"
         android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/line_height"
+            android:layout_height="@dimen/dp_45"
             android:drawableLeft="@mipmap/persion_phone"
-            android:drawablePadding="@dimen/ten"
+            android:drawablePadding="@dimen/dp_10"
             android:gravity="center_vertical"
-            android:paddingLeft="21dp"
-            android:paddingRight="@dimen/twelve"
+            android:paddingLeft="@dimen/dp_21"
+            android:paddingRight="@dimen/dp_12"
             android:text="@string/phone_no"
             android:textColor="@color/three"
             android:textSize="15sp" />
@@ -244,24 +244,24 @@
 
     <TextView
         style="@style/fenge"
-        android:layout_marginLeft="@dimen/margin"
-        android:layout_marginRight="@dimen/margin" />
+        android:layout_marginLeft="@dimen/dp_16"
+        android:layout_marginRight="@dimen/dp_16" />
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/twelve"
+        android:layout_marginTop="@dimen/dp_12"
         android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/line_height"
+            android:layout_height="@dimen/dp_45"
             android:drawableLeft="@mipmap/persion_zhandian"
-            android:drawablePadding="@dimen/ten"
+            android:drawablePadding="@dimen/dp_10"
             android:gravity="center_vertical"
-            android:paddingLeft="21dp"
-            android:paddingRight="@dimen/twelve"
+            android:paddingLeft="@dimen/dp_21"
+            android:paddingRight="@dimen/dp_12"
             android:text="@string/section"
             android:textColor="@color/three"
             android:textSize="15sp" />
@@ -279,24 +279,24 @@
 
     <TextView
         style="@style/fenge"
-        android:layout_marginLeft="@dimen/margin"
-        android:layout_marginRight="@dimen/margin" />
+        android:layout_marginLeft="@dimen/dp_16"
+        android:layout_marginRight="@dimen/dp_16" />
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/twelve"
+        android:layout_marginTop="@dimen/dp_12"
         android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/line_height"
+            android:layout_height="@dimen/dp_45"
             android:drawableLeft="@mipmap/persion_biaoduan"
-            android:drawablePadding="@dimen/ten"
+            android:drawablePadding="@dimen/dp_10"
             android:gravity="center_vertical"
-            android:paddingLeft="21dp"
-            android:paddingRight="@dimen/twelve"
+            android:paddingLeft="@dimen/dp_21"
+            android:paddingRight="@dimen/dp_12"
             android:text="@string/station"
             android:textColor="@color/three"
             android:textSize="15sp" />
@@ -314,24 +314,24 @@
 
     <TextView
         style="@style/fenge"
-        android:layout_marginLeft="@dimen/margin"
-        android:layout_marginRight="@dimen/margin" />
+        android:layout_marginLeft="@dimen/dp_16"
+        android:layout_marginRight="@dimen/dp_16" />
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/twelve"
+        android:layout_marginTop="@dimen/dp_12"
         android:orientation="horizontal">
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/line_height"
+            android:layout_height="@dimen/dp_45"
             android:drawableLeft="@mipmap/persion_sdanwei"
-            android:drawablePadding="@dimen/ten"
+            android:drawablePadding="@dimen/dp_10"
             android:gravity="center_vertical"
-            android:paddingLeft="21dp"
-            android:paddingRight="@dimen/twelve"
+            android:paddingLeft="@dimen/dp_21"
+            android:paddingRight="@dimen/dp_12"
             android:text="@string/department"
             android:textColor="@color/three"
             android:textSize="15sp" />
@@ -349,16 +349,16 @@
 
     <TextView
         style="@style/fenge"
-        android:layout_marginLeft="@dimen/margin"
-        android:layout_marginRight="@dimen/margin" />
+        android:layout_marginLeft="@dimen/dp_16"
+        android:layout_marginRight="@dimen/dp_16" />
 
 
     <Button
         android:id="@+id/persion_update_btn"
-        android:layout_width="260dp"
-        android:layout_height="@dimen/line_height"
+        android:layout_width="@dimen/dp_26"
+        android:layout_height="@dimen/dp_15"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="33dp"
+        android:layout_marginTop="@dimen/dp_33"
         android:background="@drawable/btn_circular"
         android:onClick="updateNick"
         android:text="@string/accomplish"
