--- a/app/src/main/res/layout/activity_progress_tracking.xml
+++ b/app/src/main/res/layout/activity_progress_tracking.xml
@@ -11,7 +11,7 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="@dimen/line_height"
+        android:layout_height="@dimen/dp_45"
         android:background="@color/bg_dc"
         android:gravity="center"
         android:text="苏州S1线土建05标"
@@ -21,7 +21,7 @@
     <Spinner
         android:id="@+id/mspinner"
         android:layout_width="wrap_content"
-        android:layout_height="@dimen/thirty"
+        android:layout_height="@dimen/dp_30"
         android:layout_gravity="right"
         android:gravity="center"
         android:overlapAnchor="false"
