--- a/app/src/main/res/layout/activity_qms.xml
+++ b/app/src/main/res/layout/activity_qms.xml
@@ -25,7 +25,7 @@
             <TextView
                 android:id="@+id/tv_section_name"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/line_height"
+                android:layout_height="@dimen/dp_45"
                 android:background="@color/bg_dc"
                 android:gravity="center"
                 android:text=""
@@ -35,7 +35,7 @@
             <LinearLayout
                 android:id="@+id/safety_line_zhandian"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/line_height"
+                android:layout_height="@dimen/dp_45"
                 android:background="@color/light_green"
                 android:gravity="center"
                 android:orientation="horizontal">
@@ -45,7 +45,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:drawableRight="@mipmap/xiala_blue"
-                    android:drawablePadding="@dimen/seven"
+                    android:drawablePadding="@dimen/dp_7"
                     android:text=""
                     android:textColor="@color/tv_blue"
                     android:textSize="12sp" />
@@ -55,27 +55,27 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/ten"
+                android:layout_marginTop="@dimen/dp_10"
                 android:background="@color/light_green"
                 android:orientation="vertical"
-                android:paddingBottom="@dimen/margin">
+                android:paddingBottom="@dimen/dp_16">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:background="@color/light_green"
                     android:orientation="horizontal"
-                    android:paddingTop="@dimen/btn_circular">
+                    android:paddingTop="@dimen/dp_21">
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="25dp"
-                        android:layout_marginRight="@dimen/twelve"
+                        android:layout_marginLeft="@dimen/dp_25"
+                        android:layout_marginRight="@dimen/dp_12"
                         android:layout_weight="1"
                         android:background="@drawable/text_blue_line"
                         android:orientation="horizontal"
-                        android:padding="2dp">
+                        android:padding="@dimen/dp_2">
 
                         <TextView
                             android:layout_width="match_parent"
@@ -83,7 +83,7 @@
                             android:layout_weight="1"
                             android:background="@color/btn_bule"
                             android:gravity="center"
-                            android:padding="@dimen/five"
+                            android:padding="@dimen/dp_5"
                             android:text="检查记录"
                             android:textColor="@color/white"
                             android:textSize="13sp" />
@@ -95,7 +95,7 @@
                             android:layout_weight="1"
                             android:background="@drawable/text_white_cricle"
                             android:gravity="center"
-                            android:padding="@dimen/five"
+                            android:padding="@dimen/dp_5"
                             android:text=""
                             android:textColor="@color/btn_bule"
                             android:textSize="13sp" />
@@ -105,12 +105,12 @@
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/twelve"
-                        android:layout_marginRight="25dp"
+                        android:layout_marginLeft="@dimen/dp_12"
+                        android:layout_marginRight="@dimen/dp_25"
                         android:layout_weight="1"
                         android:background="@drawable/text_blue_line"
                         android:orientation="horizontal"
-                        android:padding="2dp">
+                        android:padding="@dimen/dp_2">
 
                         <TextView
                             android:layout_width="match_parent"
@@ -118,7 +118,7 @@
                             android:layout_weight="1"
                             android:background="@color/btn_bule"
                             android:gravity="center"
-                            android:padding="@dimen/five"
+                            android:padding="@dimen/dp_5"
                             android:text="整改率"
                             android:textColor="@color/white"
                             android:textSize="13sp" />
@@ -130,7 +130,7 @@
                             android:layout_weight="1"
                             android:background="@drawable/text_white_cricle"
                             android:gravity="center"
-                            android:padding="@dimen/five"
+                            android:padding="@dimen/dp_5"
                             android:text=""
                             android:textColor="@color/btn_bule"
                             android:textSize="13sp" />
@@ -142,7 +142,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="25dp"
+                    android:layout_marginTop="@dimen/dp_25"
                     android:orientation="horizontal">
 
                     <LinearLayout
@@ -157,7 +157,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:drawableLeft="@mipmap/safety_wancheng"
-                            android:drawablePadding="@dimen/four"
+                            android:drawablePadding="@dimen/dp_4"
                             android:gravity="center"
                             android:text=""
                             android:textColor="@color/tv_blue"
@@ -184,7 +184,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:drawableLeft="@mipmap/safety_wancheng"
-                            android:drawablePadding="@dimen/four"
+                            android:drawablePadding="@dimen/dp_4"
                             android:gravity="center"
                             android:text=""
                             android:textColor="@color/tv_blue"
@@ -211,7 +211,7 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:drawableLeft="@mipmap/safety_wancheng"
-                            android:drawablePadding="@dimen/four"
+                            android:drawablePadding="@dimen/dp_4"
                             android:gravity="center"
                             android:text=""
                             android:textColor="@color/tv_blue"
@@ -234,10 +234,10 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/ten"
+                android:layout_marginTop="@dimen/dp_10"
                 android:background="@color/light_green"
                 android:orientation="horizontal"
-                android:padding="@dimen/twelve">
+                android:padding="@dimen/dp_12">
 
 
                 <TextView
@@ -246,7 +246,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:drawableTop="@mipmap/safety_jianchajilu"
-                    android:drawablePadding="@dimen/ten"
+                    android:drawablePadding="@dimen/dp_10"
                     android:gravity="center"
                     android:onClick="safetyManagent"
                     android:text="检查记录"
@@ -260,7 +260,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:drawableTop="@mipmap/safety_wuxiaojilu"
-                    android:drawablePadding="@dimen/ten"
+                    android:drawablePadding="@dimen/dp_10"
                     android:gravity="center"
                     android:onClick="safetyManagent"
                     android:text="无效数据"
@@ -274,7 +274,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:drawableTop="@mipmap/safety_daizhenggai"
-                    android:drawablePadding="@dimen/ten"
+                    android:drawablePadding="@dimen/dp_10"
                     android:gravity="center"
                     android:onClick="safetyManagent"
                     android:text="待整改"
@@ -288,7 +288,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:drawableTop="@mipmap/safety_zhenggaifucha"
-                    android:drawablePadding="@dimen/ten"
+                    android:drawablePadding="@dimen/dp_10"
                     android:gravity="center"
                     android:onClick="safetyManagent"
                     android:text="整改复查"
@@ -303,13 +303,13 @@
                 android:layout_height="wrap_content"
                 android:background="@color/light_green"
                 android:orientation="horizontal"
-                android:padding="@dimen/twelve">
+                android:padding="@dimen/dp_12">
 
                 <Button
                     android:id="@+id/safety_yinhuan_fenxi"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/line_height"
-                    android:layout_marginRight="@dimen/eight"
+                    android:layout_height="@dimen/dp_45"
+                    android:layout_marginRight="@dimen/dp_8"
                     android:layout_weight="1"
                     android:background="@drawable/input_bg_blue"
                     android:onClick="safetyManagent"
@@ -320,8 +320,8 @@
                 <Button
                     android:id="@+id/safety_danger_type"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/line_height"
-                    android:layout_marginLeft="@dimen/eight"
+                    android:layout_height="@dimen/dp_45"
+                    android:layout_marginLeft="@dimen/dp_8"
                     android:layout_weight="1"
                     android:background="@drawable/input_bg_blue"
                     android:onClick="safetyManagent"
@@ -334,17 +334,17 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/ten"
+                android:layout_marginTop="@dimen/dp_10"
                 android:background="@color/light_green"
                 android:orientation="vertical"
-                android:paddingBottom="@dimen/btn_circular">
+                android:paddingBottom="@dimen/dp_21">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:drawableLeft="@mipmap/safety_mouth_fenxi"
-                    android:drawablePadding="@dimen/five"
-                    android:padding="@dimen/ten"
+                    android:drawablePadding="@dimen/dp_5"
+                    android:padding="@dimen/dp_10"
                     android:text="最近一个月隐患分析"
                     android:textColor="@color/three"
                     android:textSize="14sp" />
@@ -352,8 +352,8 @@
                 <com.github.mikephil.charting.charts.BarChart
                     android:id="@+id/chart"
                     android:layout_width="match_parent"
-                    android:layout_height="300dp"
-                    android:layout_margin="@dimen/btn_circular" />
+                    android:layout_height="@dimen/dp_300"
+                    android:layout_margin="@dimen/dp_21" />
 
             </LinearLayout>
 
