--- a/app/src/main/res/layout/activity_qr.xml
+++ b/app/src/main/res/layout/activity_qr.xml
@@ -9,8 +9,8 @@
         android:id="@+id/dbv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:zxing_framing_rect_height="222dp"
-        app:zxing_framing_rect_width="222dp"
+        app:zxing_framing_rect_height="@dimen/dp_222"
+        app:zxing_framing_rect_width="@dimen/dp_222"
         app:zxing_preview_scaling_strategy="fitXY"
         app:zxing_scanner_layout="@layout/view_qr"
         app:zxing_use_texture_view="true" />
@@ -18,8 +18,8 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="72dp"
-        android:paddingTop="36dp">
+        android:layout_height="@dimen/dp_72"
+        android:paddingTop="@dimen/dp_36">
 
 
         <ImageView
@@ -27,9 +27,9 @@
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:onClick="back"
-            android:paddingLeft="@dimen/margin"
-            android:paddingRight="10dp"
-            android:paddingBottom="14dp"
+            android:paddingLeft="@dimen/dp_16"
+            android:paddingRight="@dimen/dp_10"
+            android:paddingBottom="@dimen/dp_14"
             android:src="@mipmap/back_icon" />
 
         <TextView
@@ -46,7 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="16dp"
+            android:layout_marginRight="@dimen/dp_16"
             android:gravity="center"
             android:textColor="@color/white"
             android:textSize="12sp"
