--- a/app/src/main/res/layout/activity_questions.xml
+++ b/app/src/main/res/layout/activity_questions.xml
@@ -7,17 +7,17 @@
     <RelativeLayout
         android:id="@+id/title_line"
         android:layout_width="match_parent"
-        android:layout_height="72dp"
+        android:layout_height="@dimen/dp_72"
         android:background="@color/btn_bule"
-        android:paddingTop="36dp">
+        android:paddingTop="@dimen/dp_36">
 
         <ImageView
-            android:layout_width="31dp"
+            android:layout_width="@dimen/dp_31"
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
-            android:layout_marginLeft="6dp"
+            android:layout_marginLeft="@dimen/dp_6"
             android:onClick="back"
-            android:padding="10dp"
+            android:padding="@dimen/dp_10"
             android:src="@mipmap/back_icon" />
 
         <TextView
@@ -38,7 +38,7 @@
             android:layout_alignParentRight="true"
             android:gravity="center"
             android:onClick="submitPaper"
-            android:paddingRight="16dp"
+            android:paddingRight="@dimen/dp_16"
             android:text="交卷"
             android:textColor="@color/white"
             android:textSize="18sp" />
@@ -48,7 +48,7 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="70dp"
+            android:layout_marginRight="@dimen/dp_70"
             android:gravity="center_vertical"
             android:text="44:22"
             android:textColor="@color/white"
@@ -59,7 +59,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/line_height"
+        android:layout_height="@dimen/dp_45"
         android:layout_alignParentBottom="true"
         android:background="@color/f_six"
         android:orientation="horizontal">
@@ -76,7 +76,7 @@
 
         <TextView
             android:id="@+id/quest_page_no"
-            android:layout_width="80dp"
+            android:layout_width="@dimen/dp_80"
             android:layout_height="match_parent"
             android:gravity="center"
             android:text="15/35"
@@ -85,7 +85,7 @@
 
         <TextView
             android:id="@+id/quest_xia"
-            android:layout_width="100dp"
+            android:layout_width="@dimen/dp_100"
             android:layout_height="match_parent"
             android:gravity="center"
             android:onClick="questionsNext"
@@ -101,19 +101,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/title_line"
-        android:layout_marginTop="@dimen/ten"
+        android:layout_marginTop="@dimen/dp_10"
         android:background="@color/f_six"
         android:orientation="vertical"
-        android:paddingBottom="@dimen/btn_circular">
+        android:paddingBottom="@dimen/dp_21">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="@dimen/ten">
+            android:padding="@dimen/dp_10">
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="@dimen/thirty"
+                android:layout_height="@dimen/dp_30"
                 android:gravity="bottom"
                 android:orientation="horizontal">
 
@@ -129,14 +129,14 @@
                     android:id="@+id/quest_choice_type"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/five"
+                    android:layout_marginLeft="@dimen/dp_5"
                     android:layout_toRightOf="@id/quest_choice_index"
                     android:background="@drawable/questions_line"
                     android:gravity="center"
-                    android:paddingLeft="@dimen/five"
-                    android:paddingTop="2dp"
-                    android:paddingRight="@dimen/five"
-                    android:paddingBottom="2dp"
+                    android:paddingLeft="@dimen/dp_5"
+                    android:paddingTop="@dimen/dp_2"
+                    android:paddingRight="@dimen/dp_5"
+                    android:paddingBottom="@dimen/dp_2"
                     android:text="选择题"
                     android:textColor="@color/six"
                     android:textSize="10sp" />
@@ -146,9 +146,9 @@
                 android:id="@+id/quest_choice_content"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/ten"
+                android:layout_marginTop="@dimen/dp_10"
                 android:gravity="bottom"
-                android:lineHeight="@dimen/thirty"
+                android:lineHeight="@dimen/dp_30"
                 android:text="\u3000\u3000\u3000\u3000依据《建设工程安全生产管理条例》，施工单位应当设立安全生产(    )机构，配备专职安全生产管理人员。"
                 android:textColor="#ff333333"
                 android:textSize="16sp" />
@@ -166,14 +166,14 @@
             <TextView
                 android:id="@+id/quest_choice_a"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/line_height"
-                android:layout_marginLeft="@dimen/ten"
-                android:layout_marginTop="@dimen/ten"
-                android:layout_marginRight="@dimen/ten"
+                android:layout_height="@dimen/dp_45"
+                android:layout_marginLeft="@dimen/dp_10"
+                android:layout_marginTop="@dimen/dp_40"
+                android:layout_marginRight="@dimen/dp_10"
                 android:background="@color/f_six"
                 android:gravity="center_vertical"
                 android:onClick="choiceSelect"
-                android:paddingLeft="@dimen/ten"
+                android:paddingLeft="@dimen/dp_10"
                 android:text="A．检查"
                 android:textColor="@color/three"
                 android:textSize="16sp" />
@@ -181,14 +181,14 @@
             <TextView
                 android:id="@+id/quest_choice_b"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/line_height"
-                android:layout_marginLeft="@dimen/ten"
-                android:layout_marginTop="@dimen/ten"
-                android:layout_marginRight="@dimen/ten"
+                android:layout_height="@dimen/dp_45"
+                android:layout_marginLeft="@dimen/dp_10"
+                android:layout_marginTop="@dimen/dp_10"
+                android:layout_marginRight="@dimen/dp_10"
                 android:background="@color/f_six"
                 android:gravity="center_vertical"
                 android:onClick="choiceSelect"
-                android:paddingLeft="@dimen/ten"
+                android:paddingLeft="@dimen/dp_10"
                 android:text="B．监督"
                 android:textColor="@color/three"
                 android:textSize="16sp" />
@@ -196,14 +196,14 @@
             <TextView
                 android:id="@+id/quest_choice_c"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/line_height"
-                android:layout_marginLeft="@dimen/ten"
-                android:layout_marginTop="@dimen/ten"
-                android:layout_marginRight="@dimen/ten"
+                android:layout_height="@dimen/dp_45"
+                android:layout_marginLeft="@dimen/dp_10"
+                android:layout_marginTop="@dimen/dp_10"
+                android:layout_marginRight="@dimen/dp_10"
                 android:background="@color/f_six"
                 android:gravity="center_vertical"
                 android:onClick="choiceSelect"
-                android:paddingLeft="@dimen/ten"
+                android:paddingLeft="@dimen/dp_10"
                 android:text="C．监理"
                 android:textColor="@color/three"
                 android:textSize="16sp" />
@@ -211,14 +211,14 @@
             <TextView
                 android:id="@+id/quest_choice_d"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/line_height"
-                android:layout_marginLeft="@dimen/ten"
-                android:layout_marginTop="@dimen/ten"
-                android:layout_marginRight="@dimen/ten"
+                android:layout_height="@dimen/dp_45"
+                android:layout_marginLeft="@dimen/dp_45"
+                android:layout_marginTop="@dimen/dp_10"
+                android:layout_marginRight="@dimen/dp_10"
                 android:background="@color/f_six"
                 android:gravity="center_vertical"
                 android:onClick="choiceSelect"
-                android:paddingLeft="@dimen/ten"
+                android:paddingLeft="@dimen/dp_10"
                 android:text="D．管理"
                 android:textColor="@color/three"
                 android:textSize="16sp" />
@@ -234,14 +234,14 @@
             <TextView
                 android:id="@+id/quest_judge_true"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/line_height"
-                android:layout_marginLeft="@dimen/ten"
-                android:layout_marginTop="@dimen/ten"
-                android:layout_marginRight="@dimen/ten"
+                android:layout_height="@dimen/dp_45"
+                android:layout_marginLeft="@dimen/dp_10"
+                android:layout_marginTop="@dimen/dp_10"
+                android:layout_marginRight="@dimen/dp_10"
                 android:background="@color/f_six"
                 android:gravity="center_vertical"
                 android:onClick="judgeSelect"
-                android:paddingLeft="@dimen/ten"
+                android:paddingLeft="@dimen/dp_10"
                 android:text="A．√"
                 android:textColor="@color/three"
                 android:textSize="16sp" />
@@ -249,14 +249,14 @@
             <TextView
                 android:id="@+id/quest_judge_false"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/line_height"
-                android:layout_marginLeft="@dimen/ten"
-                android:layout_marginTop="@dimen/ten"
-                android:layout_marginRight="@dimen/ten"
+                android:layout_height="@dimen/dp_45"
+                android:layout_marginLeft="@dimen/dp_10"
+                android:layout_marginTop="@dimen/dp_10"
+                android:layout_marginRight="@dimen/dp_10"
                 android:background="@color/f_six"
                 android:gravity="center_vertical"
                 android:onClick="judgeSelect"
-                android:paddingLeft="@dimen/ten"
+                android:paddingLeft="@dimen/dp_10"
                 android:text="B．×"
                 android:textColor="@color/three"
                 android:textSize="16sp" />
@@ -267,30 +267,30 @@
             android:id="@+id/line_tiankongti"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/ten"
+            android:layout_marginTop="@dimen/dp_10"
             android:orientation="vertical"
             android:visibility="gone">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/line_height"
+                android:layout_height="@dimen/dp_10"
                 android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="@dimen/thirty"
+                    android:layout_height="@dimen/dp_30"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="@dimen/ten"
+                    android:layout_marginLeft="@dimen/dp_10"
                     android:background="@color/f_six"
                     android:gravity="center_vertical"
-                    android:paddingLeft="@dimen/ten"
+                    android:paddingLeft="@dimen/dp_10"
                     android:text="①．"
                     android:textColor="@color/three"
                     android:textSize="16sp" />
 
                 <EditText
                     android:id="@+id/questions_edit_one"
-                    android:layout_width="200dp"
+                    android:layout_width="@dimen/dp_200"
                     android:layout_height="match_parent"
                     android:gravity="bottom"
                     android:textColor="@color/three"
@@ -301,24 +301,24 @@
             <LinearLayout
                 android:id="@+id/line_just_one"
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/line_height"
+                android:layout_height="@dimen/dp_45"
                 android:orientation="horizontal">
 
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="@dimen/thirty"
+                    android:layout_height="@dimen/dp_30"
                     android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="@dimen/ten"
+                    android:layout_marginLeft="@dimen/dp_10"
                     android:background="@color/f_six"
                     android:gravity="center_vertical"
-                    android:paddingLeft="@dimen/ten"
+                    android:paddingLeft="@dimen/dp_10"
                     android:text="②．"
                     android:textColor="@color/three"
                     android:textSize="16sp" />
 
                 <EditText
                     android:id="@+id/questions_edit_two"
-                    android:layout_width="200dp"
+                    android:layout_width="@dimen/dp_200"
                     android:layout_height="match_parent"
                     android:gravity="bottom"
                     android:textColor="@color/three"
@@ -332,13 +332,13 @@
             android:id="@+id/edit_jianda"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_margin="@dimen/ten"
+            android:layout_margin="@dimen/dp_10"
             android:background="@null"
             android:gravity="top"
             android:hint="请输入答案"
-            android:lineHeight="@dimen/thirty"
+            android:lineHeight="@dimen/dp_30"
             android:minLines="5"
-            android:padding="@dimen/ten"
+            android:padding="@dimen/dp_10"
             android:text="答："
             android:textSize="16sp"
             android:visibility="gone" />
