--- a/app/src/main/res/layout/activity_schedule_control.xml
+++ b/app/src/main/res/layout/activity_schedule_control.xml
@@ -8,17 +8,17 @@
     <RelativeLayout
         android:id="@+id/title_line"
         android:layout_width="match_parent"
-        android:layout_height="72dp"
+        android:layout_height="@dimen/dp_72"
         android:background="@color/btn_bule"
-        android:paddingTop="36dp">
+        android:paddingTop="@dimen/dp_36">
 
         <ImageView
-            android:layout_width="31dp"
+            android:layout_width="@dimen/dp_31"
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
-            android:layout_marginLeft="6dp"
+            android:layout_marginLeft="@dimen/dp_6"
             android:onClick="back"
-            android:padding="10dp"
+            android:padding="@dimen/dp_10"
             android:src="@mipmap/back_icon" />
 
         <TextView
@@ -36,10 +36,10 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
-            android:layout_marginBottom="@dimen/ten"
+            android:layout_marginBottom="@dimen/dp_10"
             android:gravity="center"
             android:onClick="showPopu"
-            android:paddingRight="@dimen/ten"
+            android:paddingRight="@dimen/dp_10"
             android:src="@mipmap/more_icon"
             android:textColor="@color/white"
             android:textSize="12sp"
@@ -49,7 +49,7 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="@dimen/line_height"
+        android:layout_height="@dimen/dp_45"
         android:background="@color/bg_dc"
         android:gravity="center"
         android:text="苏州S1线土建05标"
@@ -59,19 +59,19 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/ten"
-        android:layout_marginTop="@dimen/twelve"
-        android:layout_marginRight="@dimen/ten"
+        android:layout_marginLeft="@dimen/dp_10"
+        android:layout_marginTop="@dimen/dp_12"
+        android:layout_marginRight="@dimen/dp_10"
         android:background="@drawable/pay_bg_hui"
         android:orientation="vertical"
-        android:paddingLeft="@dimen/twelve"
-        android:paddingTop="@dimen/seven"
-        android:paddingRight="@dimen/twelve"
-        android:paddingBottom="@dimen/ten">
+        android:paddingLeft="@dimen/dp_12"
+        android:paddingTop="@dimen/dp_7"
+        android:paddingRight="@dimen/dp_12"
+        android:paddingBottom="@dimen/dp_10">
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/thirty"
+            android:layout_height="@dimen/dp_30"
             android:gravity="center"
             android:text="当日进度"
             android:textColor="#ff3d91d0"
@@ -84,7 +84,7 @@
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/thirty"
+                android:layout_height="@dimen/dp_30"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:text="成孔50m"
@@ -93,7 +93,7 @@
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/thirty"
+                android:layout_height="@dimen/dp_30"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:text="桩基检测2个"
@@ -109,7 +109,7 @@
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/thirty"
+                android:layout_height="@dimen/dp_30"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:text="钢筋制安50m"
@@ -118,7 +118,7 @@
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/thirty"
+                android:layout_height="@dimen/dp_30"
                 android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:text="灌浇量2个"
