--- a/app/src/main/res/layout/activity_teaching_video.xml
+++ b/app/src/main/res/layout/activity_teaching_video.xml
@@ -9,11 +9,11 @@
 
         <TextView
             android:id="@+id/tv_img_msg"
-            android:layout_width="80dp"
-            android:layout_height="@dimen/btn_circular"
+            android:layout_width="@dimen/dp_80"
+            android:layout_height="@dimen/dp_21"
             android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
-            android:layout_marginBottom="@dimen/line_height"
+            android:layout_marginBottom="@dimen/dp_45"
             android:background="@mipmap/vedio_btn_pic"
             android:gravity="center"
             android:text="图文教程"
@@ -24,10 +24,10 @@
     <TextView
         android:id="@+id/video_title"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/thirty"
-        android:layout_marginTop="@dimen/ten"
+        android:layout_height="@dimen/dp_30"
+        android:layout_marginTop="@dimen/dp_10"
         android:gravity="center_vertical"
-        android:paddingLeft="@dimen/ten"
+        android:paddingLeft="@dimen/dp_10"
         android:text="施工安全常识了解—工人上岗基本要求"
         android:textColor="@color/three"
         android:textSize="12sp"
@@ -37,7 +37,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingLeft="@dimen/ten"
+        android:paddingLeft="@dimen/dp_10"
         android:visibility="gone">
 
 
@@ -60,8 +60,8 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/margin"
-            android:layout_marginRight="@dimen/margin"
+            android:layout_marginLeft="@dimen/dp_16"
+            android:layout_marginRight="@dimen/dp_16"
             android:text="|"
             android:textColor="@color/text_seven"
             android:textSize="9sp" />
