--- a/app/src/main/res/layout/activity_test_grade.xml
+++ b/app/src/main/res/layout/activity_test_grade.xml
@@ -11,7 +11,7 @@
 
     <TextView
         style="@style/fenge"
-        android:layout_marginTop="@dimen/ten" />
+        android:layout_marginTop="@dimen/dp_10" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,8 +19,8 @@
         android:orientation="horizontal">
 
         <TextView
-            android:layout_width="80dp"
-            android:layout_height="@dimen/thirty"
+            android:layout_width="@dimen/dp_80"
+            android:layout_height="@dimen/dp_30"
             android:gravity="center"
             android:text="序号"
             android:textColor="@color/three"
@@ -28,7 +28,7 @@
 
         <TextView
             android:layout_width="match_parent"
-            android:layout_height="@dimen/thirty"
+            android:layout_height="@dimen/dp_30"
             android:layout_weight="1"
             android:gravity="center"
             android:text="试卷"
@@ -36,16 +36,16 @@
             android:textSize="12sp" />
 
         <TextView
-            android:layout_width="90dp"
-            android:layout_height="@dimen/thirty"
+            android:layout_width="@dimen/dp_90"
+            android:layout_height="@dimen/dp_30"
             android:gravity="center"
             android:text="考试成绩"
             android:textColor="@color/three"
             android:textSize="12sp" />
 
         <TextView
-            android:layout_width="90dp"
-            android:layout_height="@dimen/thirty"
+            android:layout_width="@dimen/dp_90"
+            android:layout_height="@dimen/dp_30"
             android:gravity="center"
             android:text="考试结果"
             android:textColor="@color/three"
