--- a/app/src/main/res/layout/activity_zhenggai_review.xml
+++ b/app/src/main/res/layout/activity_zhenggai_review.xml
@@ -13,7 +13,7 @@
     <TextView
         android:id="@+id/tv_section_name"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/line_height"
+        android:layout_height="@dimen/dp_45"
         android:background="@color/bg_dc"
         android:gravity="center"
         android:text=""
@@ -22,11 +22,11 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/thirty"
-        android:layout_marginTop="@dimen/ten"
+        android:layout_height="@dimen/dp_30"
+        android:layout_marginTop="@dimen/dp_10"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:paddingLeft="@dimen/ten">
+        android:paddingLeft="@dimen/dp_10">
 
         <TextView
             android:layout_width="wrap_content"
@@ -47,10 +47,10 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/thirty"
+        android:layout_height="@dimen/dp_30"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:paddingLeft="@dimen/ten">
+        android:paddingLeft="@dimen/dp_10">
 
         <TextView
             android:layout_width="wrap_content"
@@ -71,10 +71,10 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/thirty"
+        android:layout_height="@dimen/dp_30"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:paddingLeft="@dimen/ten">
+        android:paddingLeft="@dimen/dp_10">
 
         <TextView
             android:layout_width="wrap_content"
@@ -95,10 +95,10 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/thirty"
+        android:layout_height="@dimen/dp_30"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:paddingLeft="@dimen/ten">
+        android:paddingLeft="@dimen/dp_10">
 
         <TextView
             android:layout_width="wrap_content"
@@ -119,14 +119,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/ten"
-        android:layout_marginTop="@dimen/five"
-        android:layout_marginRight="@dimen/ten"
+        android:layout_marginLeft="@dimen/dp_10"
+        android:layout_marginTop="@dimen/dp_5"
+        android:layout_marginRight="@dimen/dp_10"
         android:background="@drawable/text_grey_line"
         android:gravity="top"
         android:orientation="horizontal"
-        android:paddingLeft="@dimen/ten"
-        android:paddingTop="@dimen/five">
+        android:paddingLeft="@dimen/dp_10"
+        android:paddingTop="@dimen/dp_5">
 
         <!--        <LinearLayout-->
         <!--            android:layout_width="match_parent"-->
@@ -140,9 +140,9 @@
 
         <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="22dp"
-            android:paddingLeft="@dimen/five"
-            android:paddingRight="@dimen/five"
+            android:layout_height="@dimen/dp_22"
+            android:paddingLeft="@dimen/dp_5"
+            android:paddingRight="@dimen/dp_5"
             android:src="@mipmap/edit_icon"
             android:visibility="gone" />
 
@@ -153,7 +153,7 @@
             android:background="@null"
             android:gravity="top"
             android:hint="请输入复查内容……"
-            android:lineHeight="22dp"
+            android:lineHeight="@dimen/dp_22"
             android:minLines="5"
             android:textColor="@color/three"
             android:textColorHint="@color/nine_text"
@@ -169,8 +169,8 @@
             android:id="@+id/recycler_zhenggaitongzhidan"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/ten"
-            android:layout_marginRight="@dimen/ten">
+            android:layout_marginLeft="@dimen/dp_10"
+            android:layout_marginRight="@dimen/dp_10">
 
         </androidx.recyclerview.widget.RecyclerView>
 
@@ -179,10 +179,10 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/thirty"
+        android:layout_height="@dimen/dp_30"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:paddingLeft="@dimen/ten">
+        android:paddingLeft="@dimen/dp_10">
 
         <TextView
             android:layout_width="wrap_content"
@@ -203,10 +203,10 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/thirty"
+        android:layout_height="@dimen/dp_30"
         android:gravity="center_vertical"
         android:orientation="horizontal"
-        android:paddingLeft="@dimen/ten">
+        android:paddingLeft="@dimen/dp_10">
 
         <TextView
             android:layout_width="wrap_content"
@@ -230,7 +230,7 @@
                 android:button="@drawable/checkbox_frame_red"
                 android:checked="true"
                 android:gravity="center"
-                android:paddingHorizontal="@dimen/five"
+                android:paddingHorizontal="@dimen/dp_5"
                 android:text="@string/qualified"
                 android:textColor="@color/text_green"
                 android:textSize="12sp" />
@@ -239,10 +239,10 @@
                 android:id="@+id/zhenggai_buhege"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/btn_circular"
+                android:layout_marginLeft="@dimen/dp_21"
                 android:button="@drawable/checkbox_frame_red"
                 android:gravity="center"
-                android:paddingHorizontal="@dimen/five"
+                android:paddingHorizontal="@dimen/dp_5"
                 android:text="@string/disqualification"
                 android:textColor="@color/red"
                 android:textSize="12sp" />
@@ -254,10 +254,10 @@
 
 
     <Button
-        android:layout_width="118dp"
-        android:layout_height="@dimen/line_height"
+        android:layout_width="@dimen/dp_118"
+        android:layout_height="@dimen/dp_45"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="@dimen/btn_circular"
+        android:layout_marginTop="@dimen/dp_21"
         android:background="@drawable/input_bg_blue"
         android:onClick="zhenggaiCommit"
         android:text="提交"
