--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -11,11 +11,11 @@
         <com.youth.banner.Banner
             android:id="@+id/home_list_banner"
             android:layout_width="match_parent"
-            android:layout_height="220dp" />
+            android:layout_height="@dimen/dp_220" />
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="68dp">
+            android:layout_height="@dimen/dp_68">
 
 
             <LinearLayout
@@ -27,12 +27,12 @@
 
                 <TextView
                     android:layout_width="wrap_content"
-                    android:layout_height="@dimen/line_height"
+                    android:layout_height="@dimen/dp_45"
                     android:drawableRight="@mipmap/index_location"
-                    android:drawablePadding="@dimen/five"
+                    android:drawablePadding="@dimen/dp_5"
                     android:gravity="center"
-                    android:paddingLeft="@dimen/btn_circular"
-                    android:paddingRight="@dimen/seven"
+                    android:paddingLeft="@dimen/dp_21"
+                    android:paddingRight="@dimen/dp_7"
                     android:text="上海"
                     android:textColor="@color/white"
                     android:textSize="12sp"
@@ -46,8 +46,8 @@
                     android:background="@drawable/search_bg"
                     android:gravity="center_vertical"
                     android:orientation="horizontal"
-                    android:padding="@dimen/seven"
-                    android:layout_marginLeft="20dp">
+                    android:padding="@dimen/dp_7"
+                    android:layout_marginLeft="@dimen/dp_20">
 
                     <ImageView
                         android:layout_width="wrap_content"
@@ -58,7 +58,7 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/ten"
+                        android:layout_marginLeft="@dimen/dp_10"
                         android:alpha="1"
                         android:text="请输入搜索关键词"
                         android:textColor="@color/white"
@@ -72,8 +72,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
                     android:onClick="indexBtn"
-                    android:paddingLeft="@dimen/ten"
-                    android:paddingRight="@dimen/btn_circular"
+                    android:paddingLeft="@dimen/dp_10"
+                    android:paddingRight="@dimen/dp_21"
                     android:src="@mipmap/scan_icon" />
 
 
@@ -87,7 +87,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/margin">
+        android:padding="@dimen/dp_16">
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/id_rate_recycler"
@@ -112,9 +112,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/margin"
-        android:layout_marginTop="@dimen/ten"
-        android:layout_marginRight="@dimen/margin"
+        android:layout_marginLeft="@dimen/dp_16"
+        android:layout_marginTop="@dimen/dp_10"
+        android:layout_marginRight="@dimen/dp_16"
         android:orientation="horizontal"
         android:visibility="gone">
 
@@ -124,10 +124,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:drawableTop="@mipmap/main_renyuanguanli"
-            android:drawablePadding="@dimen/seven"
+            android:drawablePadding="@dimen/dp_7"
             android:gravity="center"
             android:onClick="homeClick"
-            android:padding="@dimen/twelve"
+            android:padding="@dimen/dp_12"
             android:text="@string/personnel_management"
             android:textColor="@color/six"
             android:textSize="12sp" />
@@ -139,10 +139,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:drawableTop="@mipmap/main_anquanguanli"
-            android:drawablePadding="@dimen/seven"
+            android:drawablePadding="@dimen/dp_7"
             android:gravity="center"
             android:onClick="homeClick"
-            android:padding="@dimen/twelve"
+            android:padding="@dimen/dp_12"
             android:text="@string/safety_management"
             android:textColor="@color/six"
             android:textSize="12sp" />
@@ -153,9 +153,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:drawableTop="@mipmap/main_zhiliangguanli"
-            android:drawablePadding="@dimen/seven"
+            android:drawablePadding="@dimen/dp_7"
             android:gravity="center"
-            android:padding="@dimen/twelve"
+            android:padding="@dimen/dp_12"
             android:text="@string/quality_control"
             android:textColor="@color/six"
             android:textSize="12sp" />
@@ -166,9 +166,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:drawableTop="@mipmap/main_wuliaojiancce"
-            android:drawablePadding="@dimen/seven"
+            android:drawablePadding="@dimen/dp_7"
             android:gravity="center"
-            android:padding="@dimen/twelve"
+            android:padding="@dimen/dp_12"
             android:text="@string/material_monitoring"
             android:textColor="@color/six"
             android:textSize="12sp" />
@@ -179,8 +179,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/margin"
-        android:layout_marginRight="@dimen/margin"
+        android:layout_marginLeft="@dimen/dp_16"
+        android:layout_marginRight="@dimen/dp_16"
         android:orientation="horizontal"
         android:visibility="gone">
 
@@ -189,9 +189,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:drawableTop="@mipmap/main_jindu"
-            android:drawablePadding="@dimen/seven"
+            android:drawablePadding="@dimen/dp_7"
             android:gravity="center"
-            android:padding="@dimen/twelve"
+            android:padding="@dimen/dp_12"
             android:text="@string/schedule_management"
             android:textColor="@color/six"
             android:textSize="12sp" />
@@ -203,10 +203,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:drawableTop="@mipmap/main_peixun"
-            android:drawablePadding="@dimen/seven"
+            android:drawablePadding="@dimen/dp_7"
             android:gravity="center"
             android:onClick="homeClick"
-            android:padding="@dimen/twelve"
+            android:padding="@dimen/dp_12"
             android:text="@string/training_and_check"
             android:textColor="@color/six"
             android:textSize="12sp" />
@@ -217,9 +217,9 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:drawableTop="@mipmap/main_jiankong"
-            android:drawablePadding="@dimen/seven"
+            android:drawablePadding="@dimen/dp_7"
             android:gravity="center"
-            android:padding="@dimen/twelve"
+            android:padding="@dimen/dp_12"
             android:text="@string/ai_monitoring"
             android:textColor="@color/six"
             android:textSize="12sp" />
@@ -231,10 +231,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:drawableTop="@mipmap/main_jifen"
-            android:drawablePadding="@dimen/seven"
+            android:drawablePadding="@dimen/dp_7"
             android:gravity="center"
             android:onClick="indexBtn"
-            android:padding="@dimen/twelve"
+            android:padding="@dimen/dp_12"
             android:text="@string/credits_exchange"
             android:textColor="@color/six"
             android:textSize="12sp" />
