--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -14,8 +14,8 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="68dp"
-            android:paddingTop="30dp">
+            android:layout_height="@dimen/dp_68"
+            android:paddingTop="@dimen/dp_30">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -37,18 +37,18 @@
 
             <ImageView
                 android:id="@+id/head_img"
-                android:layout_width="90dp"
+                android:layout_width="@dimen/dp_90"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="25dp"
-                android:layout_marginTop="21dp"
-                android:layout_marginBottom="21dp"
+                android:layout_marginLeft="@dimen/dp_25"
+                android:layout_marginTop="@dimen/dp_21"
+                android:layout_marginBottom="@dimen/dp_21"
                 android:src="@mipmap/mine_head" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_marginLeft="@dimen/ten"
+                android:layout_marginLeft="@dimen/dp_10"
                 android:orientation="vertical">
 
                 <TextView
@@ -63,7 +63,7 @@
                     android:id="@+id/mime_name"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
+                    android:layout_marginTop="@dimen/dp_5"
                     android:text="轮回少年"
                     android:textColor="@color/white"
                     android:textSize="18sp" />
@@ -93,128 +93,128 @@
     <TextView
         android:id="@+id/mine_persion_data"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/line_height"
-        android:layout_marginTop="@dimen/twelve"
+        android:layout_height="@dimen/dp_45"
+        android:layout_marginTop="@dimen/dp_12"
         android:drawableLeft="@mipmap/mine_ziliao"
         android:drawableRight="@mipmap/black_into"
-        android:drawablePadding="@dimen/ten"
+        android:drawablePadding="@dimen/dp_10"
         android:gravity="center_vertical"
         android:onClick="persionData"
-        android:paddingLeft="21dp"
-        android:paddingRight="21dp"
+        android:paddingLeft="@dimen/dp_21"
+        android:paddingRight="@dimen/dp_21"
         android:text="@string/personal_data"
         android:textColor="@color/three"
         android:textSize="15sp" />
 
     <TextView
         style="@style/fenge"
-        android:layout_marginLeft="@dimen/margin"
-        android:layout_marginRight="@dimen/margin" />
+        android:layout_marginLeft="@dimen/dp_16"
+        android:layout_marginRight="@dimen/dp_16" />
 
     <TextView
         android:id="@+id/mine_my_message"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/line_height"
-        android:layout_marginTop="@dimen/twelve"
+        android:layout_height="@dimen/dp_45"
+        android:layout_marginTop="@dimen/dp_12"
         android:drawableLeft="@mipmap/mine_xiaoxi"
         android:drawableRight="@mipmap/black_into"
-        android:drawablePadding="@dimen/ten"
+        android:drawablePadding="@dimen/dp_10"
         android:gravity="center_vertical"
         android:onClick="persionData"
-        android:paddingLeft="21dp"
-        android:paddingRight="21dp"
+        android:paddingLeft="@dimen/dp_21"
+        android:paddingRight="@dimen/dp_21"
         android:text="@string/my_message"
         android:textColor="@color/three"
         android:textSize="15sp" />
 
     <TextView
         style="@style/fenge"
-        android:layout_marginLeft="@dimen/margin"
-        android:layout_marginRight="@dimen/margin" />
+        android:layout_marginLeft="@dimen/dp_16"
+        android:layout_marginRight="@dimen/dp_16" />
 
     <TextView
         android:id="@+id/mine_clean_cache"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/line_height"
-        android:layout_marginTop="@dimen/twelve"
+        android:layout_height="@dimen/dp_45"
+        android:layout_marginTop="@dimen/dp_12"
         android:drawableLeft="@mipmap/mine_clean"
         android:drawableRight="@mipmap/black_into"
-        android:drawablePadding="@dimen/ten"
+        android:drawablePadding="@dimen/dp_10"
         android:gravity="center_vertical"
         android:onClick="persionData"
-        android:paddingLeft="21dp"
-        android:paddingRight="21dp"
+        android:paddingLeft="@dimen/dp_21"
+        android:paddingRight="@dimen/dp_21"
         android:text="@string/clear_cache"
         android:textColor="@color/three"
         android:textSize="15sp" />
 
     <TextView
         style="@style/fenge"
-        android:layout_marginLeft="@dimen/margin"
-        android:layout_marginRight="@dimen/margin" />
+        android:layout_marginLeft="@dimen/dp_16"
+        android:layout_marginRight="@dimen/dp_16" />
 
     <TextView
         android:id="@+id/mine_system_setting"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/line_height"
-        android:layout_marginTop="@dimen/twelve"
+        android:layout_height="@dimen/dp_45"
+        android:layout_marginTop="@dimen/dp_12"
         android:drawableLeft="@mipmap/mine_setting"
         android:drawableRight="@mipmap/black_into"
-        android:drawablePadding="@dimen/ten"
+        android:drawablePadding="@dimen/dp_10"
         android:gravity="center_vertical"
         android:onClick="persionData"
-        android:paddingLeft="21dp"
-        android:paddingRight="21dp"
+        android:paddingLeft="@dimen/dp_21"
+        android:paddingRight="@dimen/dp_21"
         android:text="@string/system_settings"
         android:textColor="@color/three"
         android:textSize="15sp" />
 
     <TextView
         style="@style/fenge"
-        android:layout_marginLeft="@dimen/margin"
-        android:layout_marginRight="@dimen/margin" />
+        android:layout_marginLeft="@dimen/dp_16"
+        android:layout_marginRight="@dimen/dp_16" />
 
     <TextView
         android:id="@+id/mine_about_us"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/line_height"
-        android:layout_marginTop="@dimen/twelve"
+        android:layout_height="@dimen/dp_45"
+        android:layout_marginTop="@dimen/dp_12"
         android:drawableLeft="@mipmap/mine_aboutus"
         android:drawableRight="@mipmap/black_into"
-        android:drawablePadding="@dimen/ten"
+        android:drawablePadding="@dimen/dp_10"
         android:gravity="center_vertical"
         android:onClick="persionData"
-        android:paddingLeft="21dp"
-        android:paddingRight="21dp"
+        android:paddingLeft="@dimen/dp_21"
+        android:paddingRight="@dimen/dp_21"
         android:text="@string/about_us"
         android:textColor="@color/three"
         android:textSize="15sp" />
 
     <TextView
         style="@style/fenge"
-        android:layout_marginLeft="@dimen/margin"
-        android:layout_marginRight="@dimen/margin" />
+        android:layout_marginLeft="@dimen/dp_16"
+        android:layout_marginRight="@dimen/dp_16" />
 
     <TextView
         android:id="@+id/mine_invite_friends"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/line_height"
-        android:layout_marginTop="@dimen/twelve"
+        android:layout_height="@dimen/dp_45"
+        android:layout_marginTop="@dimen/dp_12"
         android:drawableLeft="@mipmap/mine_yaoqing"
         android:drawableRight="@mipmap/black_into"
-        android:drawablePadding="@dimen/ten"
+        android:drawablePadding="@dimen/dp_10"
         android:gravity="center_vertical"
         android:onClick="persionData"
-        android:paddingLeft="21dp"
-        android:paddingRight="21dp"
+        android:paddingLeft="@dimen/dp_21"
+        android:paddingRight="@dimen/dp_21"
         android:text="@string/invite_friends"
         android:textColor="@color/three"
         android:textSize="15sp" />
 
     <TextView
         style="@style/fenge"
-        android:layout_marginLeft="@dimen/margin"
-        android:layout_marginRight="@dimen/margin" />
+        android:layout_marginLeft="@dimen/dp_16"
+        android:layout_marginRight="@dimen/dp_16" />
 
 
 </LinearLayout>
