--- a/app/src/main/res/layout/fragment_more.xml
+++ b/app/src/main/res/layout/fragment_more.xml
@@ -7,12 +7,12 @@
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="70dp"
+        android:layout_height="@dimen/dp_70"
         android:background="@color/btn_bule">
 
         <TextView
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/line_height"
+            android:layout_height="@dimen/dp_45"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:gravity="center"
@@ -37,8 +37,8 @@
                 android:id="@+id/upload_radiogroup"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/btn_circular"
-                android:layout_marginTop="@dimen/ten"
+                android:layout_marginLeft="@dimen/dp_21"
+                android:layout_marginTop="@dimen/dp_10"
                 android:gravity="center"
                 android:orientation="horizontal">
 
@@ -49,7 +49,7 @@
                     android:button="@drawable/checkbox_radio_blue"
                     android:checked="true"
                     android:gravity="center"
-                    android:paddingHorizontal="@dimen/five"
+                    android:paddingHorizontal="@dimen/dp_5"
                     android:text="安全问题"
                     android:textColor="@color/six"
                     android:textSize="12sp" />
@@ -58,10 +58,10 @@
                     android:id="@+id/rbtn_zhiliang"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/btn_circular"
+                    android:layout_marginLeft="@dimen/dp_21"
                     android:button="@drawable/checkbox_radio_blue"
                     android:gravity="center"
-                    android:paddingHorizontal="@dimen/five"
+                    android:paddingHorizontal="@dimen/dp_5"
                     android:text="质量问题"
                     android:textColor="@color/six"
                     android:textSize="12sp"
@@ -72,16 +72,16 @@
 
             <TextView
                 style="@style/fenge"
-                android:layout_marginLeft="@dimen/twelve"
-                android:layout_marginTop="@dimen/twelve"
-                android:layout_marginRight="@dimen/twelve" />
+                android:layout_marginLeft="@dimen/dp_12"
+                android:layout_marginTop="@dimen/dp_12"
+                android:layout_marginRight="@dimen/dp_12" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/line_height"
+                android:layout_height="@dimen/dp_45"
                 android:orientation="horizontal"
-                android:paddingLeft="@dimen/twelve"
-                android:paddingRight="@dimen/twelve">
+                android:paddingLeft="@dimen/dp_12"
+                android:paddingRight="@dimen/dp_12">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -95,7 +95,7 @@
                     android:id="@+id/upload_title"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="@dimen/five"
+                    android:layout_marginLeft="@dimen/dp_5"
                     android:background="@null"
                     android:gravity="center_vertical|left"
                     android:textColor="@color/three"
@@ -105,15 +105,15 @@
 
             <TextView
                 style="@style/fenge"
-                android:layout_marginLeft="@dimen/twelve"
-                android:layout_marginRight="@dimen/twelve" />
+                android:layout_marginLeft="@dimen/dp_12"
+                android:layout_marginRight="@dimen/dp_12" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/line_height"
+                android:layout_height="@dimen/dp_45"
                 android:orientation="horizontal"
-                android:paddingLeft="@dimen/twelve"
-                android:paddingRight="@dimen/twelve">
+                android:paddingLeft="@dimen/dp_12"
+                android:paddingRight="@dimen/dp_12">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -126,13 +126,13 @@
                 <TextView
                     android:id="@+id/more_tv_station"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/line_height"
-                    android:layout_marginLeft="@dimen/twelve"
+                    android:layout_height="@dimen/dp_45"
+                    android:layout_marginLeft="@dimen/dp_12"
                     android:layout_weight="1"
                     android:drawableRight="@mipmap/xiala_blue"
-                    android:drawablePadding="@dimen/seven"
+                    android:drawablePadding="@dimen/dp_7"
                     android:gravity="center_vertical"
-                    android:paddingRight="@dimen/twelve"
+                    android:paddingRight="@dimen/dp_12"
                     android:text="上海站"
                     android:textColor="@color/three"
                     android:textSize="16sp" />
@@ -141,16 +141,16 @@
 
             <TextView
                 style="@style/fenge"
-                android:layout_marginLeft="@dimen/twelve"
-                android:layout_marginRight="@dimen/twelve" />
+                android:layout_marginLeft="@dimen/dp_12"
+                android:layout_marginRight="@dimen/dp_12" />
 
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/line_height"
+                android:layout_height="@dimen/dp_45"
                 android:orientation="horizontal"
-                android:paddingLeft="@dimen/twelve"
-                android:paddingRight="@dimen/twelve">
+                android:paddingLeft="@dimen/dp_12"
+                android:paddingRight="@dimen/dp_12">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -163,13 +163,13 @@
                 <TextView
                     android:id="@+id/more_tv_type"
                     android:layout_width="match_parent"
-                    android:layout_height="@dimen/line_height"
-                    android:layout_marginLeft="@dimen/twelve"
+                    android:layout_height="@dimen/dp_45"
+                    android:layout_marginLeft="@dimen/dp_12"
                     android:layout_weight="1"
                     android:drawableRight="@mipmap/xiala_blue"
-                    android:drawablePadding="@dimen/seven"
+                    android:drawablePadding="@dimen/dp_7"
                     android:gravity="center_vertical"
-                    android:paddingRight="@dimen/twelve"
+                    android:paddingRight="@dimen/dp_12"
                     android:text="上海站"
                     android:textColor="@color/three"
                     android:textSize="16sp" />
@@ -178,16 +178,16 @@
 
             <TextView
                 style="@style/fenge"
-                android:layout_marginLeft="@dimen/twelve"
-                android:layout_marginRight="@dimen/twelve" />
+                android:layout_marginLeft="@dimen/dp_12"
+                android:layout_marginRight="@dimen/dp_12" />
 
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/line_height"
+                android:layout_height="@dimen/dp_45"
                 android:orientation="horizontal"
-                android:paddingLeft="@dimen/twelve"
-                android:paddingRight="@dimen/twelve">
+                android:paddingLeft="@dimen/dp_12"
+                android:paddingRight="@dimen/dp_12">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -199,14 +199,14 @@
 
                 <TextView
                     android:id="@+id/more_tv_gongxu"
-                    android:layout_width="280dp"
+                    android:layout_width="@dimen/dp_280"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="@dimen/twelve"
+                    android:layout_marginLeft="@dimen/dp_12"
                     android:layout_weight="1"
                     android:drawableRight="@mipmap/xiala_blue"
-                    android:drawablePadding="@dimen/seven"
+                    android:drawablePadding="@dimen/dp_7"
                     android:gravity="center_vertical"
-                    android:paddingRight="@dimen/twelve"
+                    android:paddingRight="@dimen/dp_12"
                     android:text="工序名称"
                     android:textColor="@color/three"
                     android:textSize="16sp" />
@@ -216,16 +216,16 @@
 
             <TextView
                 style="@style/fenge"
-                android:layout_marginLeft="@dimen/twelve"
-                android:layout_marginRight="@dimen/twelve" />
+                android:layout_marginLeft="@dimen/dp_12"
+                android:layout_marginRight="@dimen/dp_12" />
 
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/line_height"
+                android:layout_height="@dimen/dp_45"
                 android:orientation="horizontal"
-                android:paddingLeft="@dimen/twelve"
-                android:paddingRight="@dimen/twelve">
+                android:paddingLeft="@dimen/dp_12"
+                android:paddingRight="@dimen/dp_12">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -242,14 +242,14 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginLeft="@dimen/ten"
-                android:layout_marginTop="@dimen/five"
-                android:layout_marginRight="@dimen/ten"
+                android:layout_marginLeft="@dimen/dp_10"
+                android:layout_marginTop="@dimen/dp_5"
+                android:layout_marginRight="@dimen/dp_10"
                 android:background="@drawable/text_grey_line"
                 android:gravity="top"
                 android:orientation="horizontal"
-                android:paddingLeft="@dimen/ten"
-                android:paddingTop="@dimen/five">
+                android:paddingLeft="@dimen/dp_10"
+                android:paddingTop="@dimen/dp_5">
 
                 <!--        <LinearLayout-->
                 <!--            android:layout_width="match_parent"-->
@@ -264,8 +264,8 @@
                 <ImageView
                     android:layout_width="wrap_content"
                     android:layout_height="22dp"
-                    android:paddingLeft="@dimen/five"
-                    android:paddingRight="@dimen/five"
+                    android:paddingLeft="@dimen/dp_5"
+                    android:paddingRight="@dimen/dp_5"
                     android:src="@mipmap/edit_icon" />
 
                 <EditText
@@ -286,10 +286,10 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/line_height"
+                android:layout_height="@dimen/dp_45"
                 android:orientation="horizontal"
-                android:paddingLeft="@dimen/twelve"
-                android:paddingRight="@dimen/twelve">
+                android:paddingLeft="@dimen/dp_12"
+                android:paddingRight="@dimen/dp_12">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -303,12 +303,12 @@
                     android:id="@+id/more_tv_utils"
                     android:layout_width="280dp"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="@dimen/twelve"
+                    android:layout_marginLeft="@dimen/dp_12"
                     android:layout_weight="1"
                     android:drawableRight="@mipmap/xiala_blue"
-                    android:drawablePadding="@dimen/seven"
+                    android:drawablePadding="@dimen/dp_7"
                     android:gravity="center_vertical"
-                    android:paddingRight="@dimen/twelve"
+                    android:paddingRight="@dimen/dp_12"
                     android:text="这是分包单位"
                     android:textColor="@color/three"
                     android:textSize="16sp" />
@@ -318,16 +318,16 @@
 
             <TextView
                 style="@style/fenge"
-                android:layout_marginLeft="@dimen/twelve"
-                android:layout_marginRight="@dimen/twelve" />
+                android:layout_marginLeft="@dimen/dp_12"
+                android:layout_marginRight="@dimen/dp_12" />
 
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/line_height"
+                android:layout_height="@dimen/dp_45"
                 android:orientation="horizontal"
-                android:paddingLeft="@dimen/twelve"
-                android:paddingRight="@dimen/twelve">
+                android:paddingLeft="@dimen/dp_12"
+                android:paddingRight="@dimen/dp_12">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -341,7 +341,7 @@
                     android:id="@+id/upload_zerenren"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:layout_marginLeft="@dimen/five"
+                    android:layout_marginLeft="@dimen/dp_5"
                     android:background="@null"
                     android:gravity="center_vertical|left"
                     android:textColor="@color/three"
@@ -351,15 +351,15 @@
 
             <TextView
                 style="@style/fenge"
-                android:layout_marginLeft="@dimen/twelve"
-                android:layout_marginRight="@dimen/twelve" />
+                android:layout_marginLeft="@dimen/dp_12"
+                android:layout_marginRight="@dimen/dp_12" />
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="@dimen/thirty"
+                android:layout_height="@dimen/dp_30"
                 android:gravity="center_vertical"
                 android:orientation="horizontal"
-                android:paddingLeft="@dimen/ten">
+                android:paddingLeft="@dimen/dp_10">
 
                 <TextView
                     android:layout_width="wrap_content"
@@ -386,8 +386,8 @@
                     android:id="@+id/main_recycler_update"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="@dimen/ten"
-                    android:layout_marginRight="@dimen/ten">
+                    android:layout_marginLeft="@dimen/dp_10"
+                    android:layout_marginRight="@dimen/dp_10">
 
                 </androidx.recyclerview.widget.RecyclerView>
 
@@ -406,9 +406,9 @@
             <Button
                 android:id="@+id/btn_upload"
                 android:layout_width="118dp"
-                android:layout_height="@dimen/line_height"
+                android:layout_height="@dimen/dp_45"
                 android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/btn_circular"
+                android:layout_marginTop="@dimen/dp_45"
                 android:layout_marginBottom="50dp"
                 android:background="@drawable/input_bg_blue"
                 android:text="上传"
