--- a/app/src/main/res/layout/item_tiyan_view.xml
+++ b/app/src/main/res/layout/item_tiyan_view.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="@dimen/line_height"
-    android:layout_marginTop="@dimen/five"
+    android:layout_height="@dimen/dp_45"
+    android:layout_marginTop="@dimen/dp_5"
     android:background="@color/bg_hui"
     android:gravity="center_vertical"
     android:orientation="horizontal">
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:paddingLeft="@dimen/twelve"
+        android:paddingLeft="@dimen/dp_12"
         android:text="安全带体验"
         android:textColor="@color/three"
         android:textSize="15sp" />
@@ -20,7 +20,7 @@
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingRight="@dimen/margin"
+        android:paddingRight="@dimen/dp_16"
         android:src="@mipmap/black_into" />
 
 </LinearLayout>
