--- a/app/src/main/res/layout/item_vertical_inner.xml
+++ b/app/src/main/res/layout/item_vertical_inner.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:paddingBottom="@dimen/five">
+    android:paddingBottom="@dimen/dp_5">
 
     <!--    <TextView-->
     <!--        android:id="@+id/help_text_inner"-->
@@ -23,7 +23,7 @@
     <LinearLayout
         android:id="@+id/zong_line"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/line_height"
+        android:layout_height="@dimen/dp_45"
         android:background="@color/f_nine"
         android:orientation="horizontal">
 
@@ -31,7 +31,7 @@
             android:id="@+id/help_text_inner"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/margin"
+            android:layout_marginLeft="@dimen/dp_16"
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:text="帮助条目"
@@ -42,7 +42,7 @@
             android:id="@+id/image_fangxiang"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:padding="@dimen/margin"
+            android:padding="@dimen/dp_16"
             android:src="@mipmap/black_into" />
 
     </LinearLayout>
