--- a/app/src/main/res/layout/ui_title_bar.xml
+++ b/app/src/main/res/layout/ui_title_bar.xml
@@ -2,17 +2,17 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:id="@+id/title_line"
-    android:layout_height="72dp"
-    android:paddingTop="36dp"
+    android:layout_height="@dimen/dp_72"
+    android:paddingTop="@dimen/dp_36"
     android:background="@color/btn_bule">
 
     <ImageView
         android:id="@+id/top_back_iv"
-        android:layout_width="31dp"
+        android:layout_width="@dimen/dp_31"
         android:layout_height="match_parent"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="6dp"
-        android:padding="10dp"
+        android:layout_marginLeft="@dimen/dp_6"
+        android:padding="@dimen/dp_10"
         android:src="@mipmap/back_icon" />
 
     <TextView
@@ -32,7 +32,7 @@
         android:gravity="center"
         android:visibility="gone"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="16dp"
+        android:layout_marginRight="@dimen/dp_16"
         android:text="明细"
         android:textColor="@color/white"
         android:textSize="12sp" />
