--- a/app/src/main/res/layout/view_after_rectification.xml
+++ b/app/src/main/res/layout/view_after_rectification.xml
@@ -2,18 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="@dimen/ten"
-    android:layout_marginTop="@dimen/ten"
-    android:layout_marginRight="@dimen/ten"
+    android:layout_marginLeft="@dimen/dp_10"
+    android:layout_marginTop="@dimen/dp_10"
+    android:layout_marginRight="@dimen/dp_10"
     android:background="@drawable/item_cricle_grey"
     android:orientation="vertical"
-    android:paddingLeft="@dimen/btn_circular"
-    android:paddingRight="@dimen/btn_circular">
+    android:paddingLeft="@dimen/dp_21"
+    android:paddingRight="@dimen/dp_21">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/margin"
+        android:layout_marginTop="@dimen/dp_16"
         android:orientation="horizontal">
 
         <TextView
@@ -37,7 +37,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/ten"
+        android:layout_marginTop="@dimen/dp_10"
         android:orientation="horizontal">
 
         <TextView
@@ -62,7 +62,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/ten"
+        android:layout_marginTop="@dimen/dp_10"
         android:orientation="horizontal">
 
         <TextView
@@ -87,7 +87,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/ten"
+        android:layout_marginTop="@dimen/dp_10"
         android:orientation="horizontal">
 
         <TextView
@@ -112,7 +112,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/ten"
+        android:layout_marginTop="@dimen/dp_10"
         android:orientation="horizontal">
 
         <TextView
@@ -133,7 +133,7 @@
 
     <TextView
         style="@style/fenge"
-        android:layout_marginBottom="@dimen/ten" />
+        android:layout_marginBottom="@dimen/dp_10" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -147,7 +147,7 @@
             android:layout_weight="1"
             android:autoLink="all"
             android:gravity="center"
-            android:padding="@dimen/seven"
+            android:padding="@dimen/dp_7"
             android:text="整改上报"
             android:textColor="@color/tv_blue"
             android:textSize="12sp" />
@@ -158,7 +158,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            android:padding="@dimen/seven"
+            android:padding="@dimen/dp_7"
             android:text="整改通知单"
             android:textColor="@color/tv_blue"
             android:textSize="12sp" />
