--- a/app/src/main/res/layout/view_for_record.xml
+++ b/app/src/main/res/layout/view_for_record.xml
@@ -1,23 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="130dp"
+    android:layout_height="@dimen/dp_130"
     android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_vertical"
-        android:layout_marginLeft="@dimen/margin"
-        android:layout_marginRight="@dimen/margin"
+        android:layout_marginLeft="@dimen/dp_16"
+        android:layout_marginRight="@dimen/dp_16"
         android:orientation="horizontal">
 
 
         <ImageView
             android:id="@+id/record_image"
-            android:layout_width="108dp"
-            android:layout_height="108dp"
-            android:padding="@dimen/ten"
+            android:layout_width="@dimen/dp_108"
+            android:layout_height="@dimen/dp_108"
+            android:padding="@dimen/dp_10"
             android:scaleType="centerCrop"
             android:src="@mipmap/good4" />
 
@@ -26,7 +26,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:orientation="vertical"
-            android:paddingLeft="@dimen/ten">
+            android:paddingLeft="@dimen/dp_10">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -39,8 +39,8 @@
                 android:id="@+id/record_title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/ten"
-                android:lineHeight="22dp"
+                android:layout_marginTop="@dimen/dp_10"
+                android:lineHeight="@dimen/dp_22"
                 android:text="您于2020.3.21兑换鸿运学生风扇一台"
                 android:textColor="@color/six"
                 android:textSize="14sp" />
@@ -58,15 +58,15 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/btn_circular"
+            android:layout_marginLeft="@dimen/dp_21"
             android:gravity="center_vertical"
-            android:padding="@dimen/ten"
+            android:padding="@dimen/dp_10"
             android:text="请取件"
             android:textColor="@color/red"
             android:textSize="15sp" />
 
     </LinearLayout>
 
-    <TextView android:layout_marginTop="@dimen/margin" style="@style/fenge" />
+    <TextView android:layout_marginTop="@dimen/dp_10" style="@style/fenge" />
 
 </LinearLayout>
