--- a/app/src/main/res/layout/view_horizon_image_item.xml
+++ b/app/src/main/res/layout/view_horizon_image_item.xml
@@ -1,21 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="110dp"
+    android:layout_width="@dimen/dp_110"
     android:orientation="horizontal"
-    android:layout_height="110dp">
+    android:layout_height="@dimen/dp_110">
 
     <ImageView
         android:id="@+id/iv_list_photo"
-        android:layout_width="95dp"
+        android:layout_width="@dimen/dp_95"
         android:background="@color/white"
         android:src="@mipmap/ic_launcher"
-        android:layout_marginTop="15dp"
-        android:layout_height="95dp" />
+        android:layout_marginTop="@dimen/dp_15"
+        android:layout_height="@dimen/dp_95" />
 
     <ImageView
         android:id="@+id/image_deleted"
-        android:layout_marginLeft="-15dp"
-        android:padding="5dp"
+        android:layout_marginLeft="@dimen/dp_15_half"
+        android:padding="@dimen/dp_5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@mipmap/close_icon"
