--- a/app/src/main/res/layout/view_interal_shop_list.xml
+++ b/app/src/main/res/layout/view_interal_shop_list.xml
@@ -2,8 +2,8 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="3dp"
-    android:layout_marginTop="@dimen/ten"
+    android:layout_marginLeft="@dimen/dp_3"
+    android:layout_marginTop="@dimen/dp_10"
     android:layout_marginRight="3dp"
     android:background="@color/white"
     android:orientation="vertical">
@@ -11,14 +11,14 @@
     <ImageView
         android:id="@+id/shop_image"
         android:layout_width="match_parent"
-        android:layout_height="168dp"
+        android:layout_height="@dimen/dp_168"
         android:src="@mipmap/good1" />
 
     <TextView
         android:id="@+id/shop_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/five"
+        android:padding="@dimen/dp_5"
         android:singleLine="true"
         android:text="自动大透明伞女可晴雨两用"
         android:textColor="@color/three"
@@ -26,7 +26,7 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp"
+        android:layout_height="@dimen/dp_30"
         android:gravity="center_vertical"
         android:orientation="horizontal">
 
@@ -34,7 +34,7 @@
             android:id="@+id/interal_jifen"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:paddingLeft="@dimen/five"
+            android:paddingLeft="@dimen/dp_5"
             android:text="103积分"
             android:textColor="@color/red"
             android:textSize="9sp" />
@@ -42,7 +42,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/ten"
+            android:layout_marginLeft="@dimen/dp_10"
             android:layout_weight="1"
             android:text="仅剩5件"
             android:textColor="@color/six"
@@ -53,8 +53,8 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:gravity="center"
-            android:paddingLeft="@dimen/ten"
-            android:paddingRight="@dimen/ten"
+            android:paddingLeft="@dimen/dp_10"
+            android:paddingRight="@dimen/dp_10"
             android:text="兑换"
             android:textColor="@color/red"
             android:textSize="12sp"
