--- a/app/src/main/res/layout/view_join_test.xml
+++ b/app/src/main/res/layout/view_join_test.xml
@@ -12,8 +12,8 @@
 
         <TextView
             android:id="@+id/test_grade_desc"
-            android:layout_width="80dp"
-            android:layout_height="@dimen/line_height"
+            android:layout_width="@dimen/dp_80"
+            android:layout_height="@dimen/dp_45"
             android:gravity="center"
             android:text="序号"
             android:textColor="@color/three"
@@ -22,7 +22,7 @@
         <TextView
             android:id="@+id/test_join_name"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/line_height"
+            android:layout_height="@dimen/dp_45"
             android:layout_weight="1"
             android:gravity="center"
             android:text="安全概念测试卷 "
@@ -31,16 +31,16 @@
 
         <TextView
             android:id="@+id/test_join_time"
-            android:layout_width="90dp"
-            android:layout_height="@dimen/line_height"
+            android:layout_width="@dimen/dp_90"
+            android:layout_height="@dimen/dp_45"
             android:gravity="center"
             android:text="45分钟"
             android:textColor="@color/three"
             android:textSize="12sp" />
 
         <ImageView
-            android:layout_width="40dp"
-            android:layout_height="@dimen/line_height"
+            android:layout_width="@dimen/dp_40"
+            android:layout_height="@dimen/dp_45"
             android:scaleType="center"
             android:src="@mipmap/black_into" />
 
