--- a/app/src/main/res/layout/view_message_list.xml
+++ b/app/src/main/res/layout/view_message_list.xml
@@ -7,7 +7,7 @@
     <TextView
         android:id="@+id/message_shenhe_time"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/line_height"
+        android:layout_height="@dimen/dp_45"
         android:gravity="center"
         android:text=""
         android:textColor="@color/three"
@@ -16,17 +16,17 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/margin"
-        android:layout_marginRight="@dimen/margin"
+        android:layout_marginLeft="@dimen/dp_16"
+        android:layout_marginRight="@dimen/dp_16"
         android:background="@drawable/input_bg_grey"
         android:orientation="vertical">
 
         <TextView
             android:id="@+id/message_title"
             android:layout_width="wrap_content"
-            android:layout_height="@dimen/line_height"
+            android:layout_height="@dimen/dp_45"
             android:gravity="center_vertical"
-            android:paddingLeft="@dimen/ten"
+            android:paddingLeft="@dimen/dp_10"
             android:text="通知消息"
             android:textColor="@color/three"
             android:textSize="15sp"
@@ -37,10 +37,10 @@
             android:id="@+id/message_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="@dimen/twelve"
-            android:lineHeight="22dp"
-            android:paddingLeft="@dimen/btn_circular"
-            android:paddingRight="@dimen/btn_circular"
+            android:layout_marginBottom="@dimen/dp_12"
+            android:lineHeight="@dimen/dp_22"
+            android:paddingLeft="@dimen/dp_21"
+            android:paddingRight="@dimen/dp_21"
             android:text=""
             android:textColor="#ff666666"
             android:textSize="12sp" />
