--- a/app/src/main/res/layout/view_popu_recyle.xml
+++ b/app/src/main/res/layout/view_popu_recyle.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="2dp"
+    android:layout_marginTop="@dimen/dp_2"
     android:background="@color/white"
     android:orientation="vertical">
 
