--- a/app/src/main/res/layout/view_schedule_popu.xml
+++ b/app/src/main/res/layout/view_schedule_popu.xml
@@ -1,18 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="110dp"
+    android:layout_width="@dimen/dp_110"
     android:layout_height="wrap_content"
     android:layout_gravity="top"
     android:background="@mipmap/popu_bottom"
     android:orientation="vertical"
-    android:paddingTop="@dimen/ten">
+    android:paddingTop="@dimen/dp_10">
 
     <TextView
         android:id="@+id/process_shangbao"
-        android:layout_width="100dp"
-        android:layout_height="@dimen/thirty"
+        android:layout_width="@dimen/dp_100"
+        android:layout_height="@dimen/dp_30"
         android:gravity="center"
-        android:padding="@dimen/five"
+        android:padding="@dimen/dp_5"
         android:text="进度上报"
         android:textColor="@color/three"
         android:textSize="12sp" />
@@ -21,10 +21,10 @@
 
     <TextView
         android:id="@+id/process_genzong"
-        android:layout_width="100dp"
-        android:layout_height="@dimen/thirty"
+        android:layout_width="@dimen/dp_100"
+        android:layout_height="@dimen/dp_30"
         android:gravity="center"
-        android:padding="@dimen/five"
+        android:padding="@dimen/dp_5"
         android:text="进度跟踪"
         android:textColor="@color/three"
         android:textSize="12sp" />
