--- a/app/src/main/res/layout/view_update_image.xml
+++ b/app/src/main/res/layout/view_update_image.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="127dp"
+    android:layout_height="@dimen/dp_127"
     android:gravity="center"
     android:orientation="horizontal">
 
@@ -9,7 +9,7 @@
         android:id="@+id/rectification_list_photo"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_margin="@dimen/five"
+        android:layout_margin="@dimen/dp_5"
         android:scaleType="center"
         android:src="@mipmap/rect_icon1" />
 
